--- a/_posts/2022-09-19-INMEDIA-13人藏槍械案-10人遭控-反恐條例-及串謀謀殺罪-部分人還柙近3年-押後至10.3訊.html
+++ b/_posts/2022-09-19-INMEDIA-13人藏槍械案-10人遭控-反恐條例-及串謀謀殺罪-部分人還柙近3年-押後至10.3訊.html
@@ -9,7 +9,7 @@ author: 獨媒報導
 ---
 
 <img src="https://www.inmediahk.net/files/column_images/3103.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>2019年12月8日「國際人權日大遊行」前夕，警方在灣仔民宿、荃灣貨倉等檢獲槍械和武器，先後起訴共13人，包括黃店「3C維修工作室」老闆賴振邦及「12港人」的3人，部分人還柙至今近3年。其中10人遭控《聯合國（反恐怖主義措施）條例》下「對訂明標的的爆炸的禁制罪」和串謀謀殺，最高可囚終身，是次為《反恐條例》自2002年通過至今首次使用。案件早前已提訊6次以處理交付高院的程序，今午（19日）於東區裁判法院第7次提訊。裁判官王證瑜將案押後至10月3日再訊，期間所有被告繼續還柙，他們散庭時向親友揮手。其中首被告黃振強穿上寫有黑色字「無畏」的白色T恤出庭。</p>
-<p>本案共有13名被告，合共被控12罪。其中10人被控《反恐條例》中的「對訂明標的的爆炸的禁制罪」、交替控罪的「企圖導致爆炸或製造、存有炸藥意圖危害生命或財產罪罪」，以及「串謀謀殺罪」，包括：黃振強（22歲，無業）、吳智鴻（24歲，工程人員）、張俊富（22歲、學生）、張銘裕（20歲）、嚴文謙（21歲、學生）、蘇緯軒（19歲）、彭軍壕（33歲）、李家田（24歲）、黃店「3C維修工作室」老闆賴振邦（29歲，技術員）及許湛榮（24歲，物業管理助理）。同案另有鍾雪瑩（29歲）、蔡凱明（20歲）及陳玉龍（27歲），目前所有被告正還柙。</p>
+<p>本案共有13名被告，合共被控12罪。其中10人被控《反恐條例》中的「對訂明標的的爆炸的禁制罪」、交替控罪的「企圖導致爆炸或製造、存有炸藥意圖危害生命或財產罪」，以及「串謀謀殺罪」，包括：黃振強（22歲，無業）、吳智鴻（24歲，工程人員）、張俊富（22歲、學生）、張銘裕（20歲）、嚴文謙（21歲、學生）、蘇緯軒（19歲）、彭軍壕（33歲）、李家田（24歲）、黃店「3C維修工作室」老闆賴振邦（29歲，技術員）及許湛榮（24歲，物業管理助理）。同案另有鍾雪瑩（29歲）、蔡凱明（20歲）及陳玉龍（27歲），目前所有被告正還柙。</p>
 <p>控方代表為署理高級檢控官勞泳珊。</p>
 <p>《反恐條例》下「對訂明標的的爆炸的禁制罪」指，10人於2019年8月1日至12月8日，與林銘豪（譯音）、梁靖希（譯音）及張健順（譯音），以及其他人，非法及故意向訂明標的、在訂明標的內或針對訂明標的送遞、放置、發射或引爆兩個爆炸裝置，意圖導致他人死亡或身體受嚴重傷害。</p>
 <p>為上述控罪之交替控罪的「企圖導致爆炸或製造、存有炸藥意圖危害生命或財產罪」則指，10人於2019年8月1日至12月8日，與林銘豪（譯音）、梁靖希（譯音）及張健順（譯音）作出任何作為意圖藉爆炸品導致爆炸，或串謀藉爆炸品導致爆炸，而該爆炸的性質相當可能會危害生命或對財產造成嚴重損害。</p>
