--- a/_posts/2022-09-19-PQ-聯合國大會今開幕-軍政府或民主派-誰能代表緬甸.html
+++ b/_posts/2022-09-19-PQ-聯合國大會今開幕-軍政府或民主派-誰能代表緬甸.html
@@ -24,7 +24,7 @@ author: 蔡侯塞
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/513f894e-306549679_631415845020704_3053429212502031445_n.jpg" alt="" class="wp-image-114919" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/513f894e-306549679_631415845020704_3053429212502031445_n.jpg 960w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/513f894e-306549679_631415845020704_3053429212502031445_n-300x169.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/513f894e-306549679_631415845020704_3053429212502031445_n-768x432.jpg 768w" sizes="(max-width: 960px) 100vw, 960px" /><figcaption>馬來西亞外交部長塞福丁（Datuk Seri Saifuddin Abdullah, 前排右者）及馬國代表團以先行到達位於美國紐約的聯合國總部<br>圖／Saifuddin Abdullah</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/513f894e-306549679_631415845020704_3053429212502031445_n.jpg" alt="" class="wp-image-114919" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/513f894e-306549679_631415845020704_3053429212502031445_n.jpg 960w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/513f894e-306549679_631415845020704_3053429212502031445_n-300x169.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/513f894e-306549679_631415845020704_3053429212502031445_n-768x432.jpg 768w" sizes="(max-width: 960px) 100vw, 960px" /><figcaption>馬來西亞外交部長塞福丁（Datuk Seri Saifuddin Abdullah, 前排右者）及馬國代表團以先行到達位於美國紐約的聯合國總部<br>圖／Saifuddin Abdullah</figcaption></figure></div>
 
 
 
