Update VOCUS 2022-09-22 patch

--- a/_posts/2022-09-21-VOCUS-漂流家園-未成年的海上漂流.html
+++ b/_posts/2022-09-21-VOCUS-漂流家園-未成年的海上漂流.html
@@ -41,4 +41,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/4561169a-5760-46bf-ab88-637aedb2a853.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">雖然我覺得這次《漂流家園》有不少細節表現不錯，例如住宅的結構、流血受傷等細節身體表現，並且還有關於心理成面的故事會對於有同樣類似遭遇的觀眾有感，但我認為《漂流家園》是一個忽略大方向一直在刻劃細節的作品，因為太過度講求細膩的情感部分，而整體的收尾並沒有表現很好，甚至是草草收場，這點讓人可惜。</div>
 <div class="draft-block draft--p left">許多伏筆都做得有些粗糙，只要熟知日本動畫的套路其實不難懂導演要表達的東西，尤其在日本老物擬態的付喪神這種想法，其實也非什麼新概念，很容易看出來後續的安排，但開始與結局的處理方式不太能說服人，如果要在長篇故事著墨，可能導演石田祐康還是要學會如何收斂自己的理念去合乎故事，而不是讓故事勉強配合自己的創作理念，成了讓人滿頭問號的結尾。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/BM0TkfJox-o"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/BM0TkfJox-o"></iframe></div>
