--- a/_posts/2022-09-21-PQ-美國防工業難去中-新f-35戰機內有中國零件交付急踩煞車.html
+++ b/_posts/2022-09-21-PQ-美國防工業難去中-新f-35戰機內有中國零件交付急踩煞車.html
@@ -12,7 +12,7 @@ author: 蔡侯塞
 
 
 
-<p class="pqnote">美國國防部表示，在從製造商處得知中國製造的合金磁鐵被用於 F-35 的渦輪引擎中，因此暫時停止製造商洛克希德馬丁（Lockheed Martin Corp.）的交付作業，因為這違反了聯邦國防採購規則。不過，美國防部發言人戈梅爾（Russell Goemaere）表示，這個磁鐵零件不會造成安全問題，他說：「我們已經確認，磁鐵不會傳輸資訊或損害飛機的完整性，並且不存在跟此問題相關的性能、品質、安全或安保的風險，F-35 在役機隊的飛行任務將正常繼續。」此外，洛克希德馬丁是自願報告為反對規定的狀況並已找到新的供貨來源。洛克希德馬丁計劃在 2022 年交付多達 153 架 F-35，迄今已交付 88 架。但美國防部並沒有透露現在有多少飛機的交付程序被推遲，或者有多少家架戰機含有中國磁鐵零件。</p>
+<p class="pqnote">美國國防部表示，在從製造商處得知中國製造的合金磁鐵被用於 F-35 的渦輪引擎中，因此暫時停止製造商洛克希德馬丁公司（Lockheed Martin Corp.）的交付作業，因為這違反了聯邦國防採購規則。不過，美國防部發言人戈梅爾（Russell Goemaere）表示，這個磁鐵零件不會造成安全問題，他說：「我們已經確認，磁鐵不會傳輸資訊或損害飛機的完整性，並且不存在跟此問題相關的性能、品質、安全或安保的風險，F-35 現役機隊的飛行任務將正常繼續。」此外，洛克希德馬丁是自願報告違反規定的狀況，並表示已找到新的供貨來源。洛克希德馬丁計劃在 2022 年交付多達 153 架 F-35，迄今已交付 88 架。但美國國防部並沒有透露現在有多少飛機的交付程序被推遲，或者有多少架戰機含有中國磁鐵零件。</p>
 
 
 
@@ -28,15 +28,15 @@ author: 蔡侯塞
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2021/12/8000f28d-中國新疆稀土礦（圖／peter-chou-kee-liu／cc-by-nc-nd-2.0）-1024x572.jpg" alt="" class="wp-image-87427" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2021/12/8000f28d-中國新疆稀土礦（圖／peter-chou-kee-liu／cc-by-nc-nd-2.0）-1024x572.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2021/12/8000f28d-中國新疆稀土礦（圖／peter-chou-kee-liu／cc-by-nc-nd-2.0）-300x168.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2021/12/8000f28d-中國新疆稀土礦（圖／peter-chou-kee-liu／cc-by-nc-nd-2.0）-768x429.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2021/12/8000f28d-中國新疆稀土礦（圖／peter-chou-kee-liu／cc-by-nc-nd-2.0）.jpg 1280w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>中國新疆稀土礦區<br>圖／Peter Chou Kee Liu／CC BY-NC-ND 2.0</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2021/12/8000f28d-中國新疆稀土礦（圖／peter-chou-kee-liu／cc-by-nc-nd-2.0）-1024x572.jpg" alt="" class="wp-image-87427" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2021/12/8000f28d-中國新疆稀土礦（圖／peter-chou-kee-liu／cc-by-nc-nd-2.0）-1024x572.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2021/12/8000f28d-中國新疆稀土礦（圖／peter-chou-kee-liu／cc-by-nc-nd-2.0）-300x168.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2021/12/8000f28d-中國新疆稀土礦（圖／peter-chou-kee-liu／cc-by-nc-nd-2.0）-768x429.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2021/12/8000f28d-中國新疆稀土礦（圖／peter-chou-kee-liu／cc-by-nc-nd-2.0）.jpg 1280w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>中國新疆稀土礦區<br>圖／Peter Chou Kee Liu／CC BY-NC-ND 2.0</figcaption></figure></div>
 
 
 
-<p class="pqnote">此外，未來仍可能會持續出現 F-35 中有中國製的零件，特別是美國公司過去試圖掩蓋在供給軍用的產品中有用中國製零件，例如艾文杜拉科技（Aventura Technologies）2019 年被發現把中國製監控設備偽裝成美國貨裝設於美國軍事設施中。而另一個現實問題是，如果廣泛的限制中國製零件會嚴重阻礙美軍生產武器，例如，中國目前供應全球 85% 以上的稀土，而<strong>生產每架 F-35 大約需要 417 公斤稀土</strong>。 </p>
+<p class="pqnote">此外，未來仍可能會持續出現 F-35 中有中國製的零件，特別是美國公司過去試圖掩蓋在供給軍用的產品中有用中國製零件，例如艾文杜拉科技（Aventura Technologies）2019 年被發現把中國製監控設備偽裝成美國貨裝設於美國軍事設施中。而另一個現實問題是，如果廣泛地限制中國製零件會嚴重阻礙美軍生產武器，例如，中國目前供應全球 85% 以上的稀土，而<strong>生產每架 F-35 大約需要 417 公斤稀土</strong>。 </p>
 
 
 
-<p>由於全球工業和高科技以結構性的轉向東亞，因此有分析師在 2018 年質疑：「是否有可能再製造純粹的美國製武器」。國防記者 Brett Tingley 說：「目前，美國幾乎完全依賴外國製造的電子產品為其大部分技術提供動力，包括國防和消費（民用）領域。這對民用高科技的競爭能力以及國防部門都有非常重要的影響。由於科技供應鏈的全球化和 1990 年代民用高科技製造業的衰落，恰逢國防預算縮減，因此外包的動力越來越大，美國國防部門的自力更生能力急劇下降。」&nbsp;</p>
+<p>由於全球工業和高科技以結構性地轉向東亞，因此有分析師在 2018 年質疑：「是否有可能再製造純粹的美國製武器」。國防記者 Brett Tingley 說：「目前，美國幾乎完全依賴外國製造的電子產品為其大部分技術提供動力，包括國防和消費（民用）領域。這對民用高科技的競爭能力以及國防部門都有非常重要的影響。由於科技供應鏈的全球化和 1990 年代民用高科技製造業的衰落，恰逢國防預算縮減，因此外包的動力越來越大，美國國防部門的自力更生能力急劇下降。」 </p>
 
 
 
