--- a/_posts/2022-09-21-INITIUM-乐团装咖人-孤魂野鬼还是二二八记忆-什么是我们时代的-台-味.html
+++ b/_posts/2022-09-21-INITIUM-乐团装咖人-孤魂野鬼还是二二八记忆-什么是我们时代的-台-味.html
@@ -8,9 +8,12 @@ tags: blog
 author: 特约撰稿人 叶瑞秋 发自台北
 ---
 
-<p>「这些年轻人的“台”不再是“蓝白拖、吃槟榔”，他们用台语叫自己“乡下人”，他们从音乐、故事、文学中唱自己的“台”味⋯⋯」</p><p>特约撰稿人 叶瑞秋 发自台北</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220922-culture-zhuang-ka-ren-taiwan-band/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/09/70196cd5b3f84d3d91750e5f2d643d43.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="“装咖人”乐团，(左起）鼓手沅谚、吉他手小朱、团长嘉祥、贝斯手劭威、主唱戴戴。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<p>「这些年轻人的“台”不再是“蓝白拖、吃槟榔”，他们用台语叫自己“乡下人”，他们从音乐、故事、文学中唱自己的“台”味⋯⋯」</p><p>特约撰稿人 叶瑞秋 发自台北</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220922-culture-zhuang-ka-ren-taiwan-band/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/09/68d5b1eb619042c6b0430f15108317c2.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="“装咖人”乐团，(左起）鼓手沅谚、吉他手小朱、团长嘉祥、贝斯手劭威、主唱戴戴。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">“装咖人”乐团，(左起）鼓手沅谚、吉他手小朱、团长嘉祥、贝斯手劭威、主唱戴戴。<span class="credit">摄：陈焯煇/端传媒</span></figcaption></figure><p>数算台湾本土乐队，2021年前“9m88”、“落日飞车”等为代表的风潮主要是RnB、Indie pop一类比较chill的风格，而在那之后，似乎就开始了新一波本土创作：包括夺得2022金曲奖最佳新人奖的“珂拉琪”，最佳台语专辑奖的“百合花”，此外还有“三牲献艺”、“梦东”⋯⋯这些乐团强调以台语、本族语言等非华语溶入创作，以台湾本土民俗、神怪、原住民族群经验等为创作灵感。</p>
 <p>而在本年金曲奖最佳新人入围名单里，还有一个叫作“装咖人”的乐团，这词在台语是“乡下人”的意思，这只乐团也是以全台语创作，题材上集合台湾的孤魂野鬼、传统庙会、乡土文化、二二八历史、民间信仰等等，音乐上则溶入台湾庙会使用的北管，又结合戏曲唱法⋯⋯这些元素好像都很“老派”，尽管乐团中人实际上相当年轻。</p>
+<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220922-culture-zhuang-ka-ren-taiwan-band/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/09/8c8823aeee5e47c48465fab307aca20c.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年5月28日，台北，“装咖人”乐团在台上表演。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            <figcaption itemprop="caption">2022年5月28日，台北，“装咖人”乐团在台上表演。<span class="credit">摄：陈焯煇/端传媒</span></figcaption></figure>
+
 <h2>红布罩眼，观落阴</h2>
 <blockquote>
 <p>“孤魂思念亲人时，夜官就带著他们出去，过阳间阴间的桥，在很远的地方看他们的家。巡场是指从‘阴间’走到‘阳间’的过程，在阳间游荡，主要是回家看亲人。”</p>
@@ -24,6 +27,7 @@ author: 特约撰稿人 叶瑞秋 发自台北
  
  
  
+
  
  
  
@@ -31,6 +35,7 @@ author: 特约撰稿人 叶瑞秋 发自台北
  
  
  
+
  
  
  
@@ -38,6 +43,7 @@ author: 特约撰稿人 叶瑞秋 发自台北
  
  
  
+
  
  
  
@@ -45,12 +51,22 @@ author: 特约撰稿人 叶瑞秋 发自台北
  
  
  
+
  
  
  
  
  
  
+ 
+
+ 
+ 
+ 
+ 
+ 
+ 
+
  
  
  
@@ -65,9 +81,11 @@ author: 特约撰稿人 叶瑞秋 发自台北
 （观众：有喔！）</small></p><p><small>（华译）“代代出状元吗？”<br>
 有喔！<br>
 “子孙有孝顺吗？”<br>
-有喔！</small></p><p>即便不太懂台语的听众，在这般氛围和背景影像的辅助下，也可大致发现这些歌曲与乡野神明与传说的关系。至于如高诗涵这样母语是台语的乐迷，则认为主唱嘉祥的台语在歌曲中声调很自然，“气口”（语气）既道地又文雅，让他非常喜欢。</p><p>歌曲与小说同步</p><p>
+有喔！</small></p><p>即便不太懂台语的听众，在这般氛围和背景影像的辅助下，也可大致发现这些歌曲与乡野神明与传说的关系。至于如高诗涵这样母语是台语的乐迷，则认为主唱嘉祥的台语在歌曲中声调很自然，“气口”（语气）既道地又文雅，让他非常喜欢。</p><p><a class="image" href="https://theinitium.com/article/20220922-culture-zhuang-ka-ren-taiwan-band/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/09/a866397e98974a21a8f2a84dc793d1a7.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年5月28日，台北，“装咖人”在台上表演。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            </p><figcaption itemprop="caption">2022年5月28日，台北，“装咖人”在台上表演。<span class="credit">摄：陈焯煇/端传媒</span></figcaption><p></p><p>歌曲与小说同步</p><p>
 </p><p>“装咖人是结合了生祥乐队（的风格）、闪灵的政治觉醒，以及陈明章的人文（关怀） 。”</p>
-<p></p><p>《夜官巡场》以嘉祥对家乡嘉义民雄火烧庄（今名丰收村）的童年记忆为创作脉络，集合野史传说、受难孤魂、阴神鬼怪以及二二八受难者的故事而成。“夜官”是嘉祥虚构的神，原型是大士爷，也即观世音化身，守护孤魂野鬼，“巡场”则是二二八受难者的孤魂被集中放在同一处。</p><p>“我把那个地方虚构成一个村落，孤魂思念亲人时，夜官就带著他们出去，过阳间阴间的桥，在很远的地方看他们的家。巡场是指从‘阴间’走到‘阳间’的过程，在阳间游荡，主要是回家看亲人。”巡场是嘉祥自己想的词，“会有‘巡’这个动作的，比如艋舺青山宫的‘夜巡’，王爷半夜去守护村头，驱逐地方恶鬼，被我转化成回家看亲人。”</p><p>《夜官巡场》里有13首歌，其中6首口白，而其实专辑是与嘉祥的一部同名原创小说同步，有时小说情节成为歌曲灵感，有时歌先写好再成为故事。嘉祥用类似民族志田野调查的方式，查阅县志，又向家人打听民间说法，从各方了解嘉义民雄之于台湾的历史，再交叉比对形成文本。专辑里的台语口白为准确还原嘉义民雄腔调，还请民雄的台语作家郑顺聪共同校对发音与文字。</p><p>装咖人之异于其他台语乐团之处，在郑顺聪看来，是“装咖人先有一个故事、文本再去写音乐，所以（音乐里）有故事性；其他乐团是先有音乐再有其他词句”。他将装咖人的文本定义为“新乡土写实”、“新台湾魔幻的创造 ”，但“制作蛮现代，歌词不像过去口语的台语，是比较文一点的。”在他看来，装咖人是“结合生祥乐队（的风格）、闪灵的政治觉醒，以及陈明章的人文（关怀） ”。</p><p>聆听这张专辑，就像翻开嘉祥童年记忆改编的小说，从一个虚构的“夜官”开始，慢慢发现许多人物，有《水流妈》同名的水流妈、《乩身》的侯爷、《罗汉》的罗汉⋯⋯水流妈庙是嘉义民雄很有名的阴庙（主祀无主孤魂的庙），据传是清朝一具女尸飘在沟渠，好心村民将其安葬后祭拜，因神迹屡屡信徒愈多，庙也愈大，“有次我问我妈，水流妈是男生还是女生，她说是男生，我觉得很奇怪，就想说不定她根本不想当神，不想在这家庙，（因为）是男是女大家都不清楚，说不定是他想要离开这，但被供在这⋯⋯”后来就有了《水流妈》这首歌。</p><p>
+<p></p><p>《夜官巡场》以嘉祥对家乡嘉义民雄火烧庄（今名丰收村）的童年记忆为创作脉络，集合野史传说、受难孤魂、阴神鬼怪以及二二八受难者的故事而成。“夜官”是嘉祥虚构的神，原型是大士爷，也即观世音化身，守护孤魂野鬼，“巡场”则是二二八受难者的孤魂被集中放在同一处。</p><p>“我把那个地方虚构成一个村落，孤魂思念亲人时，夜官就带著他们出去，过阳间阴间的桥，在很远的地方看他们的家。巡场是指从‘阴间’走到‘阳间’的过程，在阳间游荡，主要是回家看亲人。”巡场是嘉祥自己想的词，“会有‘巡’这个动作的，比如艋舺青山宫的‘夜巡’，王爷半夜去守护村头，驱逐地方恶鬼，被我转化成回家看亲人。”</p><p>《夜官巡场》里有13首歌，其中6首口白，而其实专辑是与嘉祥的一部同名原创小说同步，有时小说情节成为歌曲灵感，有时歌先写好再成为故事。嘉祥用类似民族志田野调查的方式，查阅县志，又向家人打听民间说法，从各方了解嘉义民雄之于台湾的历史，再交叉比对形成文本。专辑里的台语口白为准确还原嘉义民雄腔调，还请民雄的台语作家郑顺聪共同校对发音与文字。</p><p>装咖人之异于其他台语乐团之处，在郑顺聪看来，是“装咖人先有一个故事、文本再去写音乐，所以（音乐里）有故事性；其他乐团是先有音乐再有其他词句”。他将装咖人的文本定义为“新乡土写实”、“新台湾魔幻的创造 ”，但“制作蛮现代，歌词不像过去口语的台语，是比较文一点的。”在他看来，装咖人是“结合生祥乐队（的风格）、闪灵的政治觉醒，以及陈明章的人文（关怀） ”。</p><p><a class="image" href="https://theinitium.com/article/20220922-culture-zhuang-ka-ren-taiwan-band/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2021/10/f5cbc09417054c2da8f8b2caecd4e040.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2021年10月25日东港，神轿遶境穿过夜市。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            </p><figcaption itemprop="caption">2021年10月25日东港，神轿遶境穿过夜市。<span class="credit">摄：陈焯煇/端传媒</span></figcaption><p></p><p>聆听这张专辑，就像翻开嘉祥童年记忆改编的小说，从一个虚构的“夜官”开始，慢慢发现许多人物，有《水流妈》同名的水流妈、《乩身》的侯爷、《罗汉》的罗汉⋯⋯水流妈庙是嘉义民雄很有名的阴庙（主祀无主孤魂的庙），据传是清朝一具女尸飘在沟渠，好心村民将其安葬后祭拜，因神迹屡屡信徒愈多，庙也愈大，“有次我问我妈，水流妈是男生还是女生，她说是男生，我觉得很奇怪，就想说不定她根本不想当神，不想在这家庙，（因为）是男是女大家都不清楚，说不定是他想要离开这，但被供在这⋯⋯”后来就有了《水流妈》这首歌。</p><p>
 </p><p>“听完几首装咖人（乡下人）的创作，不能不赞叹台湾真的卧虎藏龙，结合民谣与传统音乐元素，用摇滚编制打造出不落俗套的多元风格。”</p>
 <p></p><p>歌曲《罗汉》写的是嘉祥儿时常常一起在合作社客厅看Discovery游手好闲的叔叔，“我想说很奇怪这个叔叔都不用工作，一直在这边好像不用回家，到处在村庄游荡，好像自由逍遥。”长大了才知道那个叔叔因运送猪只时，不小心撞死人被吊销执照，没人敢用他，工作越来越少，要钓鱼抓生鲜来饱腹，是一种“不得已”的状态，“‘罗汉’在宗教是指得到智慧、觉悟了，不会受苦楚。我小说里是罗汉脚（未婚中年男子），流浪汉，他要接受体制主宰才能脱离罗汉脚，但他宁愿不要体制的驯化，就想自由自在，事实上他没办法做到自由自在，不上不下。”</p><p><small>风定水岸 近倚草山 雺雾贴伫山壁 水鬼佮人相倚<br>
 罗汉撒酒 鱼仔佮船恬恬无声 天地是遐尔仔阔 人佮人欲按怎相倚<br>
@@ -77,7 +95,8 @@ author: 特约撰稿人 叶瑞秋 发自台北
 罗汉撒酒，鱼和船静静无声。天地是那么的大，人和人要怎么靠近知心?<br>
 无风水岸，行过草山。太阳是已经下山，山顶的月亮傻傻的看。<br>
 罗汉提酒，一 山爬过一山。<br>
-船只是那么的大，话讲不出口，怎么会突然一声就结束?</small></p><p>而音乐方面的专业评鉴中，知名乐评人马瓜（蔡政忠）将这张专辑选为国外乐评网站“beehype”的2021“台湾年度专辑｜并评价道：“对本土历史与文化深入研究后，用音乐创作叙说故事，听完几首装咖人（乡下人）的创作，不能不赞叹台湾真的卧虎藏龙，结合民谣与传统音乐元素，用摇滚编制打造出不落俗套的多元风格。越来越多人投入创作台语歌谣，深耕挖掘出更多过往的历史。”</p><p>二二八冤魂</p><p>
+船只是那么的大，话讲不出口，怎么会突然一声就结束?</small></p><p>而音乐方面的专业评鉴中，知名乐评人马瓜（蔡政忠）将这张专辑选为国外乐评网站“beehype”的2021“台湾年度专辑｜并评价道：“对本土历史与文化深入研究后，用音乐创作叙说故事，听完几首装咖人（乡下人）的创作，不能不赞叹台湾真的卧虎藏龙，结合民谣与传统音乐元素，用摇滚编制打造出不落俗套的多元风格。越来越多人投入创作台语歌谣，深耕挖掘出更多过往的历史。”</p><p><a class="image" href="https://theinitium.com/article/20220922-culture-zhuang-ka-ren-taiwan-band/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/09/225ca6a3b3274a8993be81ec7daa7659.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年5月28日，台北，“装咖人”的戴戴预备上台表演。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            </p><figcaption itemprop="caption">2022年5月28日，台北，“装咖人”的戴戴预备上台表演。<span class="credit">摄：陈焯煇/端传媒</span></figcaption><p></p><p>二二八冤魂</p><p>
 </p><p>“二二八受难者竟然不被记得，尸骨没有被领回去，教科书没有他们的纪录，政府档案被销毁，他们就像完全被消失。这让我想写他们，越少人知道，越值得书写。”</p>
 <p></p><p>马瓜最推荐的碟中单曲是《林秀媚》，这首歌以第一人称，讲述了二二八受难者<a href="https://zh.wikipedia.org/wiki/%E7%9B%A7%E9%88%B5%E6%AC%BD">卢炳钦</a>的遗孀林秀媚得知其爱人死后的心情。嘉祥曾在一叠资料中读到林秀媚口述灵异事件而深受感动：原来卢炳钦被枪毙的时候，林秀媚还不知道出事，她半夜在后院水池看到卢炳钦在哭，要摸的时候就不见了——她就知道是卢出事了。嘉祥认为这是一种家人思念亲人的投射：“二二八受难者的家属是被忽略的，他们多半是女性，什么角度？什么想法？怎么样继续活下去？这些是重要的。”</p><p><small>天 已经清光光 你 前跤踏出门 讲今日当好时 招阮出门散散心 我想无 哪会毋缀你来去? 你敢有 阁来的清光的日子<br>
 寒天水冷清清 厝内只有阮精神<br>
@@ -89,10 +108,14 @@ author: 特约撰稿人 叶瑞秋 发自台北
 寒天里水冷清清，家里现在只有我清醒，三仟块我已经还了，家里的米现在也够用。<br>
 你回来的那一天，我躺在床上，神明厅红光赤赤，家后院传来你一阵一阵的哭声。<br>
 天已经明亮，也是个好天气，我想了想，昨天夜里你是在为我们哭泣吧?<br>
-你蹲在那里，不愿起身，一阵一阵的哭声</small></p><p>嘉祥回忆读到二二八受难者资料时的愤懑不平：“这些人被这样对待，竟然不被记得，这些受难者尸骨没有被领回去，教科书没有他们的纪录，政府档案被销毁，他们就像完全被消失，这件事让我很难过，让我想写他们，他们应该被记下来，越少人知道，越值得书写。”</p><p>原本以为会悲情压抑的歌，却意外成为专辑里最轻快的，嘉祥在这里使用了魔幻写实的手法：“死掉的人就是死掉了，不会和这世界有什么交集，活下来的人要想办法继续人生，要照顾小孩，家庭经济支撑起来，不会是愁眉苦脸的状态，甚至是需要有点反差，日子要继续过下去的时候要有某种坚韧的精神，讲很沈重悲伤的事情用很幽默荒谬的方式去做，（我这样处理）跟文学的影响有关。”</p><p>《林秀媚》里除了卢炳钦，还提到同是二二八受难者的记者蔡铁城与画家陈澄波，嘉祥说创作的动机是希望找到嘉义受难者，将他们“召唤”回来：“蔡铁城虽不是嘉义人，但他的故事太触动我，他们在枪击之前要拍照建档，他觉得自己没有做错任何事情，所以他对著镜头是在笑，他不要让自己最后死掉的样子是愁眉苦脸的。”</p><p>
+你蹲在那里，不愿起身，一阵一阵的哭声</small></p><p>嘉祥回忆读到二二八受难者资料时的愤懑不平：“这些人被这样对待，竟然不被记得，这些受难者尸骨没有被领回去，教科书没有他们的纪录，政府档案被销毁，他们就像完全被消失，这件事让我很难过，让我想写他们，他们应该被记下来，越少人知道，越值得书写。”</p><p><a class="image" href="https://theinitium.com/article/20220922-culture-zhuang-ka-ren-taiwan-band/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/09/80d931623b594fb38f7d07ba1845f708.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="1947年2月28日，群众聚集专卖局台北分局门前，将专卖局所存的香烟、酒、火柴各种货品抛到路上，连同停在一旁的脚踏车放火焚烧泄愤。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            </p><figcaption itemprop="caption">1947年2月28日，群众聚集专卖局台北分局门前，将专卖局所存的香烟、酒、火柴各种货品抛到路上，连同停在一旁的脚踏车放火焚烧泄愤。<span class="credit">图：网上图片</span></figcaption><p></p><p>原本以为会悲情压抑的歌，却意外成为专辑里最轻快的，嘉祥在这里使用了魔幻写实的手法：“死掉的人就是死掉了，不会和这世界有什么交集，活下来的人要想办法继续人生，要照顾小孩，家庭经济支撑起来，不会是愁眉苦脸的状态，甚至是需要有点反差，日子要继续过下去的时候要有某种坚韧的精神，讲很沈重悲伤的事情用很幽默荒谬的方式去做，（我这样处理）跟文学的影响有关。”</p><p>《林秀媚》里除了卢炳钦，还提到同是二二八受难者的记者蔡铁城与画家陈澄波，嘉祥说创作的动机是希望找到嘉义受难者，将他们“召唤”回来：“蔡铁城虽不是嘉义人，但他的故事太触动我，他们在枪击之前要拍照建档，他觉得自己没有做错任何事情，所以他对著镜头是在笑，他不要让自己最后死掉的样子是愁眉苦脸的。”</p><p>
 </p><p>“我当然希望装咖人能做更大的事，但我们不去中国也可以去别的国家，其实可以受到更多关注。”</p>
-<p></p><p>事实上，近年来台湾独立乐团有许多以二二八或人权议题为题材的歌曲，从拍谢少年的《伫世界安静的时》、血肉果汁机《二二八》到美秀集团《昨暝阿爸无转来》（昨天爸爸没回来）⋯⋯提及歌曲中政治题材、参与的某些立场当先的音乐祭活动、可能被对岸封杀的风险诸种，嘉祥表示并不在意：“我觉得要看出发点和目的。若你做乐团是要赚钱，或很红很多粉丝（那可能需要担心表明立场的后果）；但我们不是这样的定位，而比较是在寻找自己是谁，是关注台湾历史中值得拿出来重新论述的东西。这样的脉络与定位下，我不会特别在意会否进不去哪些市场，我最关注的是做好作品。”</p><p>吉他手小朱也认同：“音乐不分语言不分国籍。我知道很多台湾乐团会在大陆演出，有些可能四五年前就不敢在脸书乱讲话了。我当然希望装咖人能做更大的事，但我们不去中国也可以去别的国家，其实可以受到更多关注。”</p><p>有趣的是，翻开中国大陆豆瓣网站对专辑《夜官巡场》的评论，评分高达8.6，评论71条：“交工乐队后继有人”、“对岸的乐团，已经将民俗乐器、宗教音乐、乡土文化等元素运用得炉火纯青，出神入化，他们一致不唱国语，他们一致开垦根源，声势日渐浩大，虽然音乐呈现出沾染烟火尘土的面貌，立意却先锋到领先90%的乐团。”尽管没有渠道购买，仍有中国乐迷不畏艰辛，直接在脸书私讯询问如何从台湾邮寄去大陆，“我都叫他们去诚品下订单，还是有办法买得到，只是没有在那边的通路上架。”嘉祥说。</p><p>找到台湾声音是很好玩的事</p><p>
+<p></p><p>事实上，近年来台湾独立乐团有许多以二二八或人权议题为题材的歌曲，从拍谢少年的《伫世界安静的时》、血肉果汁机《二二八》到美秀集团《昨暝阿爸无转来》（昨天爸爸没回来）⋯⋯提及歌曲中政治题材、参与的某些立场当先的音乐祭活动、可能被对岸封杀的风险诸种，嘉祥表示并不在意：“我觉得要看出发点和目的。若你做乐团是要赚钱，或很红很多粉丝（那可能需要担心表明立场的后果）；但我们不是这样的定位，而比较是在寻找自己是谁，是关注台湾历史中值得拿出来重新论述的东西。这样的脉络与定位下，我不会特别在意会否进不去哪些市场，我最关注的是做好作品。”</p><p>吉他手小朱也认同：“音乐不分语言不分国籍。我知道很多台湾乐团会在大陆演出，有些可能四五年前就不敢在脸书乱讲话了。我当然希望装咖人能做更大的事，但我们不去中国也可以去别的国家，其实可以受到更多关注。”</p><p>有趣的是，翻开中国大陆豆瓣网站对专辑《夜官巡场》的评论，评分高达8.6，评论71条：“交工乐队后继有人”、“对岸的乐团，已经将民俗乐器、宗教音乐、乡土文化等元素运用得炉火纯青，出神入化，他们一致不唱国语，他们一致开垦根源，声势日渐浩大，虽然音乐呈现出沾染烟火尘土的面貌，立意却先锋到领先90%的乐团。”尽管没有渠道购买，仍有中国乐迷不畏艰辛，直接在脸书私讯询问如何从台湾邮寄去大陆，“我都叫他们去诚品下订单，还是有办法买得到，只是没有在那边的通路上架。”嘉祥说。</p><p><a class="image" href="https://theinitium.com/article/20220922-culture-zhuang-ka-ren-taiwan-band/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/09/36ef2f7f89ba4b30a0904173b4748f8c.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年5月28日，台北，“装咖人”台上表演，台下观众呼叫。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            </p><figcaption itemprop="caption">2022年5月28日，台北，“装咖人”台上表演，台下观众呼叫。<span class="credit">摄：陈焯煇/端传媒</span></figcaption><p></p><p>找到台湾声音是很好玩的事</p><p>
 </p><p>编曲上寻找的“台”不是那种“蓝白拖、吃槟榔”。比起伍佰江湖气味的“台”，装咖人的音乐更显书卷气息；比起交工乐队（生祥乐队）的“台”，装咖人又显得喧嚣许多。</p>
-<p></p><p>高诗涵认为台湾现在年轻听众，多喜欢R&B、Indie Pop、Lo-Fi这类比较chill的音乐，“这类音乐在国外可听到许多类似作品，并非台湾特有。但装咖人就是一个很特别的年轻乐团，他们在我心目中会是出现在听完农村武装青年、百合花、生祥乐队、面包车乐团之后，从萤幕下方跳出来的‘你可能也会喜欢’的推荐视窗中，从装咖人的专辑可以阅读台湾特有的人事地物。”</p><p>台湾年轻一辈普遍对台语的刻板印象，就在那是“八点档”“乡土剧”一类很俗气的观感，但对于从小生活在农业生活聚落嘉义火烧庒的嘉祥来说，在学校和家用台语沟通是日常，直到东华大学读书他才发现学校都以华语为主，“哇，原来台湾所谓的‘汉人’真的有人不会讲台语”。“小时跟著舅舅们在货车上工作，听的都是伍佰、陈升（新宝岛康乐队）。我从来没有觉得讲台语这件事低级，不然我从小到大的生活都是一种下流或低级生活了，我从来不这样认为。”</p><p>因此，在这张儿时记忆概念的专辑里，全部使用台语创作也是他重新认识自己的过程：“重新认识自己、土地的时候，就在想自己是什么样的人，这块土地是什么样的定位，我们跟中国（文化）有很多很深的渊源，其他如日本甚至荷兰、东南亚文化也对我们有影响，我们到底什么样？我觉得这就是我们在找自己是谁，所以才会对这个主题（台语）这么关注。”</p><p>不仅在内容上“台”是主要的概念，编曲上小朱也表示：“我们希望编曲上更台一点，融合北管、投机者乐团、布袋戏、陈明章（那种感觉）”，刻意让歌曲能维持本身朴素和结构：“就一种呆呆的、缓缓地感觉很好，我后面想要去起承转合，但我还是想要保持很纯粹的结构，我希望不要让复杂的编曲转移这首歌的注意力。”</p><p>此外，他们找来了同样融合北管、台湾本土文化的独立乐团百合花的创作人林羿硕和知名制作人郑各均制作的歌曲《拜涂虱》，作为整张专辑的开场。对嘉祥来说，用北管做音乐的想法由来已久，早在2017年，还在读大学的他帮忙来表演的生祥乐队灯光技术，被生祥乐队的现场深深感动：“我完全听不懂客语，但一边工作一边听生祥唱歌，眼泪差点掉下来。”生祥乐队的音乐里有许多北管声音，这让嘉祥开始思考代表台湾的声音会是什么？“我想北管的声音就是代表之一，尤其唢呐，我感觉到的不是不吉祥，而是一种澎湃悲壮的情绪，很吸引我。”</p><p>因此在装咖人初期制作专辑时，他们找到传统北管轩社“淡水南北轩”一同办了“北管斗摇滚”展演，后来才发现，北管虽然和国乐看起来很类似，但其实是完全不一样的东西，更是和西洋乐完全不一样的系统，从节拍到音准都完全不一样，令团员很挫败。为了融入歌曲，最后只得用西方的逻辑完成，把北管的曲牌转换成现代的乐谱，为了节省经费，大部分歌里的鼓和小钞都是嘉祥和小朱自己完成的，只有唢呐是找“淡水南北轩”的林宸弘老师。</p><p>
+<p></p><p>高诗涵认为台湾现在年轻听众，多喜欢R&B、Indie Pop、Lo-Fi这类比较chill的音乐，“这类音乐在国外可听到许多类似作品，并非台湾特有。但装咖人就是一个很特别的年轻乐团，他们在我心目中会是出现在听完农村武装青年、百合花、生祥乐队、面包车乐团之后，从萤幕下方跳出来的‘你可能也会喜欢’的推荐视窗中，从装咖人的专辑可以阅读台湾特有的人事地物。”</p><p>台湾年轻一辈普遍对台语的刻板印象，就在那是“八点档”“乡土剧”一类很俗气的观感，但对于从小生活在农业生活聚落嘉义火烧庒的嘉祥来说，在学校和家用台语沟通是日常，直到东华大学读书他才发现学校都以华语为主，“哇，原来台湾所谓的‘汉人’真的有人不会讲台语”。“小时跟著舅舅们在货车上工作，听的都是伍佰、陈升（新宝岛康乐队）。我从来没有觉得讲台语这件事低级，不然我从小到大的生活都是一种下流或低级生活了，我从来不这样认为。”</p><p>因此，在这张儿时记忆概念的专辑里，全部使用台语创作也是他重新认识自己的过程：“重新认识自己、土地的时候，就在想自己是什么样的人，这块土地是什么样的定位，我们跟中国（文化）有很多很深的渊源，其他如日本甚至荷兰、东南亚文化也对我们有影响，我们到底什么样？我觉得这就是我们在找自己是谁，所以才会对这个主题（台语）这么关注。”</p><p><a class="image" href="https://theinitium.com/article/20220922-culture-zhuang-ka-ren-taiwan-band/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/09/bf327eccfbfd45a0b4b20ecb9adb7794.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年6月30日，台北，“装咖人”在团练。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            </p><figcaption itemprop="caption">2022年6月30日，台北，“装咖人”在团练。<span class="credit">摄：陈焯煇/端传媒</span></figcaption><p></p><p>不仅在内容上“台”是主要的概念，编曲上小朱也表示：“我们希望编曲上更台一点，融合北管、投机者乐团、布袋戏、陈明章（那种感觉）”，刻意让歌曲能维持本身朴素和结构：“就一种呆呆的、缓缓地感觉很好，我后面想要去起承转合，但我还是想要保持很纯粹的结构，我希望不要让复杂的编曲转移这首歌的注意力。”</p><p>此外，他们找来了同样融合北管、台湾本土文化的独立乐团百合花的创作人林羿硕和知名制作人郑各均制作的歌曲《拜涂虱》，作为整张专辑的开场。对嘉祥来说，用北管做音乐的想法由来已久，早在2017年，还在读大学的他帮忙来表演的生祥乐队灯光技术，被生祥乐队的现场深深感动：“我完全听不懂客语，但一边工作一边听生祥唱歌，眼泪差点掉下来。”生祥乐队的音乐里有许多北管声音，这让嘉祥开始思考代表台湾的声音会是什么？“我想北管的声音就是代表之一，尤其唢呐，我感觉到的不是不吉祥，而是一种澎湃悲壮的情绪，很吸引我。”</p><p>因此在装咖人初期制作专辑时，他们找到传统北管轩社“淡水南北轩”一同办了“北管斗摇滚”展演，后来才发现，北管虽然和国乐看起来很类似，但其实是完全不一样的东西，更是和西洋乐完全不一样的系统，从节拍到音准都完全不一样，令团员很挫败。为了融入歌曲，最后只得用西方的逻辑完成，把北管的曲牌转换成现代的乐谱，为了节省经费，大部分歌里的鼓和小钞都是嘉祥和小朱自己完成的，只有唢呐是找“淡水南北轩”的林宸弘老师。</p><p>
 </p><p>北管虽然和国乐看来很类似，但其实完全不一样，更和西洋乐从节拍到音准都完全不同，这令团员很挫败。但为了融入歌曲，最后只好用西方的逻辑完成，把北管的曲牌转换成现代的乐谱。</p>
-<p></p><p>“对我来说，找到台湾声音是很好玩的。”来自马祖的吉他手小朱认为台湾的声音也不仅是“本省人（台语）”，也会有“外省人”的声音、新移民的声音、原住民的声音，“台语音乐对我来说还有很多可能性，我很愿意去尝试”，在东部生活的日子里他备受音乐人巴奈的影响， 深信最重要的是音乐本身：“有承载一些东西帮群体发声，也愿意做一些关怀，心怀善念，做该做的事情。”尽管对此嘉祥觉得自己“还是想维持音乐和文学创作同时创作的模式，但这样创作速度就会慢很多。”</p><p>小朱在编曲上寻找的“台”是像月琴吟唱歌手陈达、伍佰、蔡振南这样，“它不是那种蓝白拖、吃槟榔，而是打著赤脚坐在籐椅上弹奏那种，很草根味的东西”，比起伍佰江湖气味的“台”，装咖人的音乐更显书卷气息；比起交工乐队（生祥乐队）的“台”，装咖人又显得喧嚣许多。</p><p>小朱坦承在做编曲混音时，是以交工乐队为目标去做的，因为他跟嘉祥都非常喜欢《菊花夜行军》那张专辑，小朱更认为“我们的粉丝和生祥乐队的粉丝会有一点点重叠”，都是“直接、单纯、能够让听众聆听感受音乐本身所传达的信息”。</p><p>至于同百合花、珂拉琪、三牲献艺等以台湾文化议题为核心的创作者一同出现在金曲奖入围名单上，嘉祥说：“我们这一代人有努力思考前人的成果，再用自己的音乐语言转化成这个时代的脉络。”近期《夜官巡场》专辑原型小说也已经出版，同时嘉祥也经营一个全台语的与台湾文学相关的Podcast频道《台湾热炒店》，对于台湾乡野奇谭、本土文学感兴趣的观众可以一同服用了。</p>
+<p></p><p>“对我来说，找到台湾声音是很好玩的。”来自马祖的吉他手小朱认为台湾的声音也不仅是“本省人（台语）”，也会有“外省人”的声音、新移民的声音、原住民的声音，“台语音乐对我来说还有很多可能性，我很愿意去尝试”，在东部生活的日子里他备受音乐人巴奈的影响， 深信最重要的是音乐本身：“有承载一些东西帮群体发声，也愿意做一些关怀，心怀善念，做该做的事情。”尽管对此嘉祥觉得自己“还是想维持音乐和文学创作同时创作的模式，但这样创作速度就会慢很多。”</p><p>小朱在编曲上寻找的“台”是像月琴吟唱歌手陈达、伍佰、蔡振南这样，“它不是那种蓝白拖、吃槟榔，而是打著赤脚坐在籐椅上弹奏那种，很草根味的东西”，比起伍佰江湖气味的“台”，装咖人的音乐更显书卷气息；比起交工乐队（生祥乐队）的“台”，装咖人又显得喧嚣许多。</p><p>小朱坦承在做编曲混音时，是以交工乐队为目标去做的，因为他跟嘉祥都非常喜欢《菊花夜行军》那张专辑，小朱更认为“我们的粉丝和生祥乐队的粉丝会有一点点重叠”，都是“直接、单纯、能够让听众聆听感受音乐本身所传达的信息”。</p><p>至于同百合花、珂拉琪、三牲献艺等以台湾文化议题为核心的创作者一同出现在金曲奖入围名单上，嘉祥说：“我们这一代人有努力思考前人的成果，再用自己的音乐语言转化成这个时代的脉络。”近期《夜官巡场》专辑原型小说也已经出版，同时嘉祥也经营一个全台语的与台湾文学相关的Podcast频道《台湾热炒店》，对于台湾乡野奇谭、本土文学感兴趣的观众可以一同服用了。</p><p><a class="image" href="https://theinitium.com/article/20220922-culture-zhuang-ka-ren-taiwan-band/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/09/1ba9290f4ac84b0bbdd33b5c518da9a4.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年5月28日，台北，“装咖人”预备上台表演。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            </p><figcaption itemprop="caption">2022年5月28日，台北，“装咖人”预备上台表演。<span class="credit">摄：陈焯煇/端传媒</span></figcaption><p></p>
