--- a/_posts/2022-09-22-VOCUS-prefer-與-看重-比較喜愛-先放心內-偏愛-偏好-衷情-意中-先賦優-優惠-優惠權-待優-賜惠-起訴-拔昇-等橋接.html
+++ b/_posts/2022-09-22-VOCUS-prefer-與-看重-比較喜愛-先放心內-偏愛-偏好-衷情-意中-先賦優-優惠-優惠權-待優-賜惠-起訴-拔昇-等橋接.html
@@ -28,11 +28,9 @@ author: 羅聖爾
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">prefer = pre.fer =&nbsp;貝連易.惠&nbsp;=&nbsp;賜.惠&nbsp;=&nbsp;賜惠</span>，此時爲「惠賜」的同義倒裝詞。<span style="font-weight: bold; ">東漢許慎《說文解字》記載「惠，仁也。从心从叀。」、「恩，惠也。从心因聲。」、「㤅，惠也。从心先聲。」</span>，大約可以看出漢字「賜惠」也帶有前述「不二之想」的「以仁相待」，以及「恩賜」或「給予恩惠」，或是前述的「先放心裡」或「先放心內」之類的含意。<span style="font-weight: bold; ">(P.S.&nbsp;參考〈仁義之謎〉--&nbsp;</span><a href="https://vocus.cc/SubtleSpaceOfText/5c921690fd897800011d3ea1" target="_blank" class="draft--a"><span style="font-weight: bold; ">https://vocus.cc/SubtleSpaceOfText/5c921690fd897800011d3ea1</span></a><span style="font-weight: bold; ">)</span></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">prefer = prefe二&nbsp;= prefeprefe =&nbsp;平人E附巳point連一F言&nbsp;=&nbsp;一人屮附巳點連丨Гㄧ言&nbsp;=&nbsp;大止附巳丶連丨⺁ㄧ言&nbsp;=&nbsp;走附巳斥言&nbsp;=&nbsp;起訴</span>，此時爲法律用語，或意通「提訴」、「提告」、「控告」、「<span style="font-weight: bold; ">辦理以法律</span>」(<span style="font-weight: bold; ">prefer = p.r.e.f.e.r =&nbsp;辦理以法與律&nbsp;=&nbsp;辦理以法律</span>)&nbsp;即類似「法辦」或「提起公訴」之類。其中漢文「大止」的上下組合約略描述漢文「走」的早期字體。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">prefer =&nbsp;拔亻一附一日&nbsp;=&nbsp;拔㇀丨一附丨日&nbsp;=&nbsp;拔㇀丿一附丨日&nbsp;=&nbsp;拔升日&nbsp;=&nbsp;拔昇</span>，類似「提昇」、「提拔」，據說這個意思也是&nbsp;prefer&nbsp;的古義之一。其中&nbsp;p&nbsp;約略形聲漢語「拔」的起音，「附」僅作構字用語。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">此外，由於&nbsp;prefer&nbsp;的字尾&nbsp;er&nbsp;也可能帶有字根&nbsp;*er&nbsp;之比較級的加強語意，所以以上有些字義除了已經帶有「比較」兩字的「比較喜愛」，其它的意思都可能同時轉換字根&nbsp;*er&nbsp;之比較級的含意「再；更；之更；更加；較」。舉第一個橋接式為例：</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">prefer = palm二e千E二&nbsp;=&nbsp;掌ee千EE =&nbsp;手eye.earth千田&nbsp;=&nbsp;龵目土千田&nbsp;=&nbsp;看重</span></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">prefer = prefer + er&nbsp;省一個&nbsp;er =&nbsp;看重&nbsp;+&nbsp;再&nbsp;or&nbsp;更&nbsp;or&nbsp;之更&nbsp;or&nbsp;更加&nbsp;or&nbsp;較&nbsp;=&nbsp;看重再&nbsp;or&nbsp;看重更&nbsp;or&nbsp;看重之更&nbsp;or&nbsp;看重更加&nbsp;or&nbsp;看重較</span>，亦即此時&nbsp;prefer&nbsp;也可能意通「再看重」、「更看重」、「更為看重」、「更是看重」、「更加看重」、「較看重」之類的漢字語意。</div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-apn83"><span style="font-weight: bold; ">P.S.<br></span></h2>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">preferred：prefer已動；prefer已做；prefer已的；prefer矣動；prefer矣做；prefer已的；prefer爲動；prefer爲做；prefer爲的；prefer受動；prefer受做；prefer受的；prefer的；prefer遴的</span>，或意通「prefer選的」<span style="font-weight: bold; ">；prefer擇的；先優的；先優遴擇的</span>，意通「優先選擇的」<span style="font-weight: bold; ">(P.S.&nbsp;漢字「遴」在《說文解字》裡有「行難」之意，因此「遴擇」或「遴選」也可能有一個意思是「在很難選擇的狀況中做出選擇」。)</span>。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">preferring：prefer於正；prefer於將；prefer遴於正；prefer遴於將；prefer的；prefer樣；prefer之樣；prefer之樣子；prefer遴的；prefer遴樣；prefer遴之樣；prefer遴之樣子；prefer之名動；prefer遴之名動；prefer之事；prefer遴之事；prefer之物；prefer遴之物；prefer之事物；prefer遴之事物。</span></div>
@@ -47,8 +45,6 @@ author: 羅聖爾
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">preferential card：先賦優的卡；優惠的卡片；惠優的卡硬；待優的卡條。</span>中文漢字多譯「優惠卡」或「優待卡」等。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">preference setting：preference于設定</span>，其中兩字的空格補入空格符號「〇」再約略象徵字母&nbsp;o&nbsp;而代表&nbsp;of&nbsp;以轉換漢字「于」，此處「于」字意通「關于」。漢文或譯「偏愛設定」、「參數設定」等。此語是電腦及網路常用語。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">preference shares：preference于股眾；preference于股份數複。</span>漢文或譯「優先股」。此語爲財經用語。</div>
-<div class="draft-block draft--p center"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/6GWfPycAHiE"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/6GWfPycAHiE"></iframe></div>
 <div class="draft-block draft--p center"><a href="https://youtu.be/6GWfPycAHiE" target="_blank" class="draft--a"><span style="font-weight: bold; ">https://youtu.be/6GWfPycAHiE</span></a></div>
 <div class="draft-block draft--p center"><span style="font-weight: bold; ">【附影片：I Prefer The Moonlight /&nbsp;分享自&nbsp;YouTube】</span></div>
-<div class="draft-block draft--p left"></div>
