--- a/_posts/2022-09-23-INITIUM-伊朗头巾女孩之死-警治-追杀-手术-以及伊朗街头的怒火.html
+++ b/_posts/2022-09-23-INITIUM-伊朗头巾女孩之死-警治-追杀-手术-以及伊朗街头的怒火.html
@@ -15,18 +15,11 @@ author: 庄沐杨
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220923-opinion-iran-hijab-revolution/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/09/9d36c9fc6b334a7593ec02f7617aff39.jpg?imageView2/1/w/1080/h/1659/format/jpg" alt="1989年，伊朗德黑兰一名女子手持一张杀死萨尔曼·拉什迪 (Salman Rushdie) 的海报抗议。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption">1989年，伊朗德黑兰一名女子手持一张杀死萨尔曼·拉什迪 (Salman Rushdie) 的海报抗议。<span class="credit">摄：Kaveh Kazemi/Getty Images</span></figcaption></figure>
 
-<p><br><br></p>
- 
- 
- 
- 
- 
-
- 
- 
- 
- 
- 
+<h2>玛莎·阿米尼之死</h2>
+<blockquote>
+<p>一般而言，伊朗的宗教警察在逮捕违反风纪的妇女之后，会被带去惩戒机构或者警察局接受着装方面的律令教育，随后由男性亲属前来接走。不过在阿米尼一案中体现出来的，却并不是什么相对柔和的训诫教育，而是非常直接的暴力执法，这也被外界视作是伊朗法治缺失以及系统性的性别暴力的必然结果。</p>
+</blockquote>
+<p>22岁的阿米尼与家人从老家、位于伊朗西部的萨盖兹（Saqqez）来到了首都德黑兰，但随即被当地主管风纪的宗教警察逮捕，理由是她的头巾没有遮挡住本人的头发。被宗教警察带走之后，阿米尼就被传陷入昏迷并被送到了医院，三天之后不治身亡。据联合国人权事务副高级专员纳西弗（Nada Al-Nashif）表示，阿米尼被带走之后，头部遭到了执法人员用警棍击打，并且还被重重地摔向了一辆警车；也有流出的检查报告表明，阿米尼死前已经出现了脑出血和中风——与她一同被带走的其他妇女透露，阿米尼是为了反抗执法者对她的侮辱而遭到对方毒打的。<br><br>德黑兰警察局的局长事后对外表示，阿米尼的死亡是<a href="https://www.bbc.com/news/world-middle-east-62954648">“不幸的”</a>，他个人不希望再看到类似事件发生。总统莱希也立即招呼内政部长彻查此案，但内政部长却也对外放话，称阿米尼生前有一些健康上面的问题，这种说法则遭到了受害者家属的驳斥，阿米尼的父亲表示女儿从未有过健康问题，还指出当局放出的闭路监控录像是经过“编辑”的，因为女儿的腿上明显有瘀伤，而警方公布的监控录像仅显示阿米尼在和另外遭到逮捕的女性一同抱头蹲下的过程中倒地不起。<br><br>但是对于阿米尼的家属和多数走上街头抗议的民众来说，此事重点不仅在于阿米尼的具体死因，更在于她被捕的理由，一个正常人仅仅因为头巾没有遮盖住头发，就可以依照相关律令被警察带走，然后离奇死去。在这个过程中，我们甚至看不到阿米尼们有任何“改过自新”的机会，她们甚至也不会得到来自风化警察或宗教警察的提醒或“训诫”，而是直接被判定为违法分子，进而遭到暴力执法，并最终死得不明不白。<br><br>负责抓捕阿米尼的警察属于伊朗专门的风化警察队伍，所谓指导巡逻队（Guidance Patrol），由于他们主抓违反当局依照教律制定的着装规定，尤其是头巾佩戴问题，因而也被普遍冠以宗教警察的名头。这类宗教警察组织在伊斯兰教国家并不少见，而全球迄今仍有10余个国家设立了专门的宗教警察队伍或机构，专门执行相关宗教法律，监管民众的日常穿着、饮食、举止等是否符合教义。比较著名的宗教警察组织包括塔利班掌权时期阿富汗设立的“劝善惩恶”部门，以及沙特阿拉伯的“劝善惩恶协会”——后者在被正式取缔之前，其执法人员拥有极为宽泛且难以界定的权力，他们会配备细长的木棍，用以体罚罪犯。一般而言，伊朗的宗教警察在逮捕违反风纪的妇女之后，会被带去惩戒机构或者警察局接受着装方面的律令教育，随后由男性亲属前来接走。</p>
  
  
 
@@ -58,12 +51,18 @@ author: 庄沐杨
  
  
  
+ 
+ 
+ 
 
  
  
-<p>玛莎·阿米尼之死<br><br></p><p>
-</p><p>一般而言，伊朗的宗教警察在逮捕违反风纪的妇女之后，会被带去惩戒机构或者警察局接受着装方面的律令教育，随后由男性亲属前来接走。不过在阿米尼一案中体现出来的，却并不是什么相对柔和的训诫教育，而是非常直接的暴力执法，这也被外界视作是伊朗法治缺失以及系统性的性别暴力的必然结果。</p>
-<p></p><p>22岁的阿米尼与家人从老家、位于伊朗西部的萨盖兹（Saqqez）来到了首都德黑兰，但随即被当地主管风纪的宗教警察逮捕，理由是她的头巾没有遮挡住本人的头发。被宗教警察带走之后，阿米尼就被传陷入昏迷并被送到了医院，三天之后不治身亡。据联合国人权事务副高级专员纳西弗（Nada Al-Nashif）表示，阿米尼被带走之后，头部遭到了执法人员用警棍击打，并且还被重重地摔向了一辆警车；也有流出的检查报告表明，阿米尼死前已经出现了脑出血和中风——与她一同被带走的其他妇女透露，阿米尼是为了反抗执法者对她的侮辱而遭到对方毒打的。<br><br>德黑兰警察局的局长事后对外表示，阿米尼的死亡是<a href="https://www.bbc.com/news/world-middle-east-62954648">“不幸的”</a>，他个人不希望再看到类似事件发生。总统莱希也立即招呼内政部长彻查此案，但内政部长却也对外放话，称阿米尼生前有一些健康上面的问题，这种说法则遭到了受害者家属的驳斥，阿米尼的父亲表示女儿从未有过健康问题，还指出当局放出的闭路监控录像是经过“编辑”的，因为女儿的腿上明显有瘀伤，而警方公布的监控录像仅显示阿米尼在和另外遭到逮捕的女性一同抱头蹲下的过程中倒地不起。<br><br>但是对于阿米尼的家属和多数走上街头抗议的民众来说，此事重点不仅在于阿米尼的具体死因，更在于她被捕的理由，一个正常人仅仅因为头巾没有遮盖住头发，就可以依照相关律令被警察带走，然后离奇死去。在这个过程中，我们甚至看不到阿米尼们有任何“改过自新”的机会，她们甚至也不会得到来自风化警察或宗教警察的提醒或“训诫”，而是直接被判定为违法分子，进而遭到暴力执法，并最终死得不明不白。<br><br>负责抓捕阿米尼的警察属于伊朗专门的风化警察队伍，所谓指导巡逻队（Guidance Patrol），由于他们主抓违反当局依照教律制定的着装规定，尤其是头巾佩戴问题，因而也被普遍冠以宗教警察的名头。这类宗教警察组织在伊斯兰教国家并不少见，而全球迄今仍有10余个国家设立了专门的宗教警察队伍或机构，专门执行相关宗教法律，监管民众的日常穿着、饮食、举止等是否符合教义。比较著名的宗教警察组织包括塔利班掌权时期阿富汗设立的“劝善惩恶”部门，以及沙特阿拉伯的“劝善惩恶协会”——后者在被正式取缔之前，其执法人员拥有极为宽泛且难以界定的权力，他们会配备细长的木棍，用以体罚罪犯。一般而言，伊朗的宗教警察在逮捕违反风纪的妇女之后，会被带去惩戒机构或者警察局接受着装方面的律令教育，随后由男性亲属前来接走。</p><p>不过在阿米尼一案中体现出来的，却并不是什么相对柔和的训诫教育，而是非常直接的暴力执法，这也被外界视作是伊朗法治缺失以及系统性的性别暴力的必然结果。一些观点认为，强硬的保守派总统莱希上任之后进一步压缩了人们自由表达的空间，宗教警察的权力也由此得到了进一步强化。也因此，阿米尼被捕之后并没有得到“教育”或者是“训诫”，而很有可能是因反抗执法人员羞辱而遭到毒打致死。</p><p><a class="image" href="https://theinitium.com/article/20220923-opinion-iran-hijab-revolution/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/09/24ec2fefa72d4ea9b0192a58622f0ecc.jpeg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年9月21日，伊朗德黑兰民众抗议。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+ 
+ 
+
+ 
+ 
+<p>不过在阿米尼一案中体现出来的，却并不是什么相对柔和的训诫教育，而是非常直接的暴力执法，这也被外界视作是伊朗法治缺失以及系统性的性别暴力的必然结果。一些观点认为，强硬的保守派总统莱希上任之后进一步压缩了人们自由表达的空间，宗教警察的权力也由此得到了进一步强化。也因此，阿米尼被捕之后并没有得到“教育”或者是“训诫”，而很有可能是因反抗执法人员羞辱而遭到毒打致死。</p><p><a class="image" href="https://theinitium.com/article/20220923-opinion-iran-hijab-revolution/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/09/24ec2fefa72d4ea9b0192a58622f0ecc.jpeg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年9月21日，伊朗德黑兰民众抗议。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 </p><figcaption itemprop="caption">2022年9月21日，伊朗德黑兰民众抗议。<span class="credit">摄：Getty Images</span></figcaption><p></p><p>追杀“亵渎者”</p><p>
 </p><p>革命之后的伊朗毕竟是个政教合一的国度，总统的发言是一回事，最高领袖的表态又是另一回事。直到新千年之后，哈梅内伊还曾公开重申霍梅尼关于处决拉什迪的教令的有效性，革命卫队也并未就此问题转变立场。</p>
 <p></p><p>这并不是伊朗人今年的第一次怒火。在今年8月12日，著名作家萨尔曼·拉什迪在纽约遭人袭击，凶手持刀将当时准备发表演讲的拉什迪刺成重伤，拉什迪腹部及脖子均受袭，一度带上了呼吸机。尽管最终死里逃生，但拉什迪的肝脏受损严重，一只手臂也遭砍断神经，一只眼睛可能会就此失去视力。事发后，西方多国政府都公开谴责这起暴力事件，声援拉什迪。凶手哈迪·马塔尔（Hadi Matar）来自美国新泽西州，但具有黎巴嫩血统的他被曝曾屡次表达对伊朗政府的<a href="https://www.iranintl.com/en/202208179638">支持</a>，此外他也是伊朗伊斯兰革命卫队和黎巴嫩真主党的拥趸。据称，马塔尔的住所内还挂有霍梅尼（Ruhollah Khomeini）、哈梅内伊，以及前年遭到美军无人机“斩首”的伊朗伊斯兰革命卫队实权人物苏莱曼尼（Qasem Soleimani）的肖像。</p><p>凡此种种，也让多数人将此次拉什迪遇刺案件与霍梅尼颁布的“全球追杀拉什迪”法令联系在一起，认为拉什迪遭到袭击背后是伊朗当局在操盘。1988年底，早已凭借《午夜之子》折桂布克奖的拉什迪出版了《撒旦诗篇》一书，但旋即因为书中某些被视作对伊斯兰教传统和先知穆罕默德不敬的内容，而遭到多个拥有一定规模穆斯林人口的国家封禁，其中不乏东南亚的泰国和新加坡，乃至南美洲的委内瑞拉等。</p><p>尽管拉什迪一度投书捍卫自己和自己的作品，称这本书更多在乎的是移民群体的自我认同问题，而非对伊斯兰教的批判，但抵制很快演变为更加激进的方式，而最为致命的则是当时伊朗最高领袖霍梅尼的一纸教令——这位正为了内政外交的窘迫而发愁的伊斯兰革命领导人，下令处决亵渎神明和反对伊斯兰教的拉什迪。拉什迪就此被迫过上了安保重重的生活，而英国政府也因此事在1989年选择与伊朗断交。</p><p>但凡任何人，包括霍梅尼，花费点时间耐心读完《撒旦诗篇》，都会认同拉什迪“罪不致死”，拉什迪也曾表示希望自己能写出更具有批判性的文字，而《撒旦诗篇》在他看来显然并不在批判性作品之列。但这并不能阻止伊朗保守派和极端势力对于拉什迪连年以来的谴责与追杀。直到1998年，为了与英国恢复邦交，时任伊朗总统哈塔米（Mohammad Khatami）才首度在处决拉什迪的教令问题上松口，但他的措辞却也仅是伊朗政府将既不支持也不阻挠对拉什迪的刺杀行为。但革命之后的伊朗毕竟是个政教合一的国度，总统的发言是一回事，最高领袖的表态又是另一回事。直到新千年之后，哈梅内伊还曾公开重申霍梅尼关于处决拉什迪的教令的有效性，革命卫队也并未就此问题转变立场。</p><p><a class="image" href="https://theinitium.com/article/20220923-opinion-iran-hijab-revolution/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/09/fc3a4981b5f34a879cf58b6b11aecf05.jpg?imageView2/1/w/1080/h/715/format/jpg" alt="1978年，伊朗最高领袖霍梅尼（Ayatollah Ruhollah Khomeini ）。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
