--- a/_posts/2022-09-22-INMEDIA-梁熙大讚管牧大愛包容唱功好-盼兩人-一唱一和-拍住上.html
+++ b/_posts/2022-09-22-INMEDIA-梁熙大讚管牧大愛包容唱功好-盼兩人-一唱一和-拍住上.html
@@ -10,6 +10,7 @@ author: 獨媒報導
 
 <img src="https://www.inmediahk.net/files/column_images/nan.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>什麼原因令民建聯、管浩鳴和鄧炳強同場現身？並非因為陳同佳，而是民建聯立法會議員梁熙和管浩鳴在筲箕灣聯合辦事處開幕，全國人大常委譚耀宗和保安局局長鄧炳強出席擔任典禮嘉賓。梁熙在典禮介紹管浩嗚，大讚他形象好和大愛，又重提與管牧組男團向長者獻唱的事蹟，大讚他唱聖詩叻，尤如男團主音。梁熙希望自己擔任「和音」，和管牧拍住上。</p>
 <p>開幕典禮於今日下午約3時在筲箕灣愛東邨愛旭樓地下進行。梁熙致辭時先大講辦事處的由來。他指，辦事處的位置以前是海，民建聯在填海開邨後成為「第一個（政黨）」在愛東邨設立辦事處，這裏的一磚一瓦以及往後落成的社區配套，也是前愛東邨民建聯議員顏尊廉的功勞，自己會做好承先啟後的角色。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/7j005PoKr9" title="無標題"><img src="https://live.staticflickr.com/65535/52375173017_99c7b9f906_b.jpg" width="1024" alt="無標題" /></a></p>
 <p><strong>曾組團向長者獻唱 大讚管牧「唱聖詩好叻」</strong></p>
 <p>他介紹辦事處拍檔管浩嗚時，大讚他「又靚仔、形象又好、唱歌又叻」，又打趣地引述朋友的說話：「有人問點解管牧師會同你 ── 梁熙 ── 合作嘅？你憑咩黐到埋管牧師度呢？」他自問自答稱：「因為管牧師係一個牧師，一個好大愛嘅牧師，一個好包容嘅牧師，包容到我呢個好活潑好動嘅梁熙。多謝晒管牧師，非常之多謝你！」</p>
 <p>梁熙及管浩嗚曾出席一個長者音樂會時，與多名立法會議員組成男團上台獻唱。梁熙今日重提舊事，指管浩嗚「唱聖詩好叻」，是男團的主音，而他則是男團的「和音擔當」，相信未來大家可以做好「一唱一和」、「拍住上」的角色。</p>
