--- a/_posts/2022-09-21-INITIUM-单信瑜-台湾地震防灾之进化-营运持续-能力为何重要.html
+++ b/_posts/2022-09-21-INITIUM-单信瑜-台湾地震防灾之进化-营运持续-能力为何重要.html
@@ -10,8 +10,7 @@ author: 单信瑜
 
 <p>「营运持续概念指的是，在事前评估灾害发生的风险，设想好灾害发生的情境，并且为了营运中断和恢复做好“实质”的准备。」</p><p>单信瑜</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220922-opinion-taiwan-earthquake-continuity-operation/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/09/9b58b22d000a48f7b717437d42b7bc82.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="1999年9月25日，921地震后，台湾中部的一间佛寺，一尊佛像在一堆瓦砾中。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">1999年9月25日，921地震后，台湾中部的一间佛寺，一尊佛像在一堆瓦砾中。<span class="credit">摄：Wally Santana/AP/达志影像</span></figcaption></figure><p><strong>（单信瑜，台湾阳明交通大学土木工程系副教授）</strong></p>
-<p>本月17、18日台东地区的<a href="https://theinitium.com/article/20220921-taiwan-taitung-earthquake/">连续地震</a>，再一次适时地提醒台湾人地震灾害和我们的距离很近。很幸运地，这次的地震除了几座公路桥梁和铁路的灾损较为严重之外，一般民宅仅有零星的灾损，即使是玉里镇中山路二段的三层楼建筑物倒塌受到瞩目，但这一连串的地震倒塌房屋有限，死亡人数为一人，伤者也只有百余人。</p>
-<p>一来是这次地震的规模虽然不小，但在各地的震度最高也只到达6强，且其范围不大，严格说来，这次一连串的地震还不能算是对台湾地震灾害风险管理的严格考验。</p>
+<p>本月17、18日台东地区的<a href="https://theinitium.com/article/20220921-taiwan-taitung-earthquake/">连续地震</a>，再一次适时地提醒台湾人地震灾害和我们的距离很近。很幸运地，这次的地震除了几座公路桥梁和铁路的灾损较为严重之外，一般民宅仅有零星的灾损，即使是玉里镇中山路二段的三层楼建筑物倒塌受到瞩目，但这一连串的地震倒塌房屋有限，死亡人数为一人，伤者也只有百余人。<br><br>一来是这次地震的规模虽然不小，但在各地的震度最高也只到达6强，且其范围不大，严格说来，这次一连串的地震还不能算是对台湾地震灾害风险管理的严格考验。</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220922-opinion-taiwan-earthquake-continuity-operation/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/09/f224daa8f62f43d2a0978d6647f84451.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年9月18日，台湾玉里镇，一间倒塌了的便利店。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption">2022年9月18日，台湾玉里镇，一间倒塌了的便利店。<span class="credit">摄：陈焯𪸩/端传媒</span></figcaption></figure>
 
@@ -19,30 +18,11 @@ author: 单信瑜
 <blockquote>
 <p>玉里镇是台湾精神疾病医疗最重要的据点，我们不仅关心院民们在地震时是否采取了适当的自我保护作为，也关心院民们是否因为强烈的地震而不安，影响他们的疗养。</p>
 </blockquote>
-<p>从2018年<a href="https://theinitium.com/tags/_7473/">0206花莲地震</a>与今年的323玉里地震，直到这次的关山地震、池上地震，都未造成重大灾情，让我们对于花东地区地震防灾又松了一口气。对于地形狭长的花东来说，最关键的就是地震对于交通的影响，也就是剧烈的地震一旦造成主要的省道如台九线、台十一线或台铁的主要桥梁或隧道受损，造成交通中断，台湾西部的救灾资源就难以及时支援，可能必须仰赖海上或空中的运输救灾人力和机具与物资。所幸这次的桥梁受损，并未导致玉里等介于花莲市与台东市之间的区域对外交通中断。或许，这次的序列地震，确实可以加速交通部对于花东铁公路桥梁的耐震评估与补强或改建，强化花东地区地震防灾的韧性。</p>
- 
- 
+<p>从2018年<a href="https://theinitium.com/tags/_7473/">0206花莲地震</a>与今年的323玉里地震，直到这次的关山地震、池上地震，都未造成重大灾情，让我们对于花东地区地震防灾又松了一口气。对于地形狭长的花东来说，最关键的就是地震对于交通的影响，也就是剧烈的地震一旦造成主要的省道如台九线、台十一线或台铁的主要桥梁或隧道受损，造成交通中断，台湾西部的救灾资源就难以及时支援，可能必须仰赖海上或空中的运输救灾人力和机具与物资。所幸这次的桥梁受损，并未导致玉里等介于花莲市与台东市之间的区域对外交通中断。或许，这次的序列地震，确实可以加速交通部对于花东铁公路桥梁的耐震评估与补强或改建，强化花东地区地震防灾的韧性。<br><br>另一方面，任何医疗院所、养护机构灾害脆弱度都是极高，但同时却又是难以承受营运中断的单位。尤其是医疗院所，本身还担负著救灾的任务，是重要的救灾资源。2018年0206地震，花莲慈济医院因为建筑物耐震能力超越其他单位，且多年来就执行风险管理计划、营运持续计划，所以地震发生后立刻启动紧急应变和营运持续机制，发挥了重要的紧急医疗功能。</p>
+<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220922-opinion-taiwan-earthquake-continuity-operation/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/09/12f796b2db544e9d9993aae278f006c9.png?imageView2/1/w/1080/h/1080/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<figcaption itemprop="caption"><span class="credit"></span></figcaption></figure>
 
- 
- 
- 
- 
- 
- 
-
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
+<p>然而，今年323玉里地震之后，我们担心的是玉里镇几所医院的营运持续状况。或许还有些台湾民众不知道，玉里镇是台湾精神疾病医疗最重要的据点；光是台北荣民医院玉里分院及卫福部玉里医院，共收容约5,000名精神病患者。我们不仅关心院民们在地震时是否采取了适当的自我保护作为，不知他们在地震中是否受伤，也关心院民们是否因为强烈的地震而不安，影响他们的疗养。但是因为这些相关状况并没有对外揭露，我们不得而知。<br><br>这样的关心源自于以<a href="https://theinitium.com/article/20220920-opinion-taiwan-921-earthquake-23th/">921地震</a>。在医疗院所与养护机构方面，根据卫生署的统计，921地震当时，除了有79家医院受损之外，另有三家疗养院、两间护理之家受损；且当时也面临中部灾区长时间停水、停电的困境。南投地区医院的建筑物都有程度不等的受损，重症的病患也必须外送到其他没有受损的医院治疗。埔里等地的洗肾患者也必须暂时移居到台中市等地，不仅有栖身之地，更重要的是可以持续延续他们生命所必要的洗肾。<br><br>不只是地震，其他灾害甚至于大规模停电，都可能对医疗院所与养护机构造成重大威胁。2015年苏迪勒台风造成彰化县65万多户大停电，一度波及县境内共34家大型医疗院所中有11家医院，28个护理机构中有15个护理之家受到影响。其中有数十位需要氧气、心肺功能仪器监测的重症病患，需要呼叫救护车赶紧转送到其他大型医院安置。</p>
  
  
  
@@ -55,8 +35,24 @@ author: 单信瑜
  
  
  
-<p>另一方面，任何医疗院所、养护机构灾害脆弱度都是极高，但同时却又是难以承受营运中断的单位。尤其是医疗院所，本身还担负著救灾的任务，是重要的救灾资源。2018年0206地震，花莲慈济医院因为建筑物耐震能力超越其他单位，且多年来就执行风险管理计划、营运持续计划，所以地震发生后立刻启动紧急应变和营运持续机制，发挥了重要的紧急医疗功能。</p><p><a class="image" href="https://theinitium.com/article/20220922-opinion-taiwan-earthquake-continuity-operation/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/09/12f796b2db544e9d9993aae278f006c9.png?imageView2/1/w/1080/h/1080/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-</p><figcaption itemprop="caption"><span class="credit"></span></figcaption><p></p><p>然而，今年323玉里地震之后，我们担心的是玉里镇几所医院的营运持续状况。或许还有些台湾民众不知道，玉里镇是台湾精神疾病医疗最重要的据点；光是台北荣民医院玉里分院及卫福部玉里医院，共收容约5,000名精神病患者。我们不仅关心院民们在地震时是否采取了适当的自我保护作为，不知他们在地震中是否受伤，也关心院民们是否因为强烈的地震而不安，影响他们的疗养。但是因为这些相关状况并没有对外揭露，我们不得而知。</p><p>这样的关心源自于以<a href="https://theinitium.com/article/20220920-opinion-taiwan-921-earthquake-23th/">921地震</a>。在医疗院所与养护机构方面，根据卫生署的统计，921地震当时，除了有79家医院受损之外，另有三家疗养院、两间护理之家受损；且当时也面临中部灾区长时间停水、停电的困境。南投地区医院的建筑物都有程度不等的受损，重症的病患也必须外送到其他没有受损的医院治疗。埔里等地的洗肾患者也必须暂时移居到台中市等地，不仅有栖身之地，更重要的是可以持续延续他们生命所必要的洗肾。</p><p>不只是地震，其他灾害甚至于大规模停电，都可能对医疗院所与养护机构造成重大威胁。2015年苏迪勒台风造成彰化县65万多户大停电，一度波及县境内共34家大型医疗院所中有11家医院，28个护理机构中有15个护理之家受到影响。其中有数十位需要氧气、心肺功能仪器监测的重症病患，需要呼叫救护车赶紧转送到其他大型医院安置。</p><p>2017年8月15日大潭发电厂的天然气供气遭误触中断也引发全台大停电。根据新闻报导，当时高市护理之家69家，共3,818人入住，其中311人使用氧气，718人有抽痰需求、14人仰赖呼吸器；经各机构启动发电机安然共度。之所以如此，也是鉴于2016年9月莫兰蒂风灾侵台，造成高市大规模停电，护理之家乃配置发电机因应。</p><p>因此，虽然921地震之后的二十多年中，政府机关对于活动断层调查等相关地震的研究更重视，且也已经修订建筑物耐震设计规范，并对公立医院与学校等机关进行耐震评估与补强，也制定《灾害防救法》建立政府机关的紧急应变机制与基本能力。看起来台湾对于地震灾害风险管理确实已经上了轨道，但是地震防灾韧性的建构仍然不足；最主要的落差在政府与民间企业的“持续运作能力”尚未被讨论与重视。</p><p><a class="image" href="https://theinitium.com/article/20220922-opinion-taiwan-earthquake-continuity-operation/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/09/a8ff92d88a554165848c33421ea4c146.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2011年4月14日，311地震后，日本石卷市。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+<p>2017年8月15日大潭发电厂的天然气供气遭误触中断也引发全台大停电。根据新闻报导，当时高市护理之家69家，共3,818人入住，其中311人使用氧气，718人有抽痰需求、14人仰赖呼吸器；经各机构启动发电机安然共度。之所以如此，也是鉴于2016年9月莫兰蒂风灾侵台，造成高市大规模停电，护理之家乃配置发电机因应。</p><p>因此，虽然921地震之后的二十多年中，政府机关对于活动断层调查等相关地震的研究更重视，且也已经修订建筑物耐震设计规范，并对公立医院与学校等机关进行耐震评估与补强，也制定《灾害防救法》建立政府机关的紧急应变机制与基本能力。看起来台湾对于地震灾害风险管理确实已经上了轨道，但是地震防灾韧性的建构仍然不足；最主要的落差在政府与民间企业的“持续运作能力”尚未被讨论与重视。</p><p><a class="image" href="https://theinitium.com/article/20220922-opinion-taiwan-earthquake-continuity-operation/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/09/a8ff92d88a554165848c33421ea4c146.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2011年4月14日，311地震后，日本石卷市。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 </p><figcaption itemprop="caption">2011年4月14日，311地震后，日本石卷市。<span class="credit">摄：Hitoshi Yamada/NurPhoto via Getty Images</span></figcaption><p></p><p>营运持续能力建构地震防灾韧性</p><p>
 </p><p>2011年是营运持续管理被重视的转捩点，因为连续发生了两个造成全球产业重大影响的灾害。一个是3月的311东日本大震灾，另一个是11月泰国首都曼谷附近的水灾。</p>
 <p></p><p>“营运持续”虽然看起来很陌生，但其概念很简单，就是在事前评估灾害发生的风险，设想好灾害发生的情境，并且为了营运中断和恢复做好“实质”的准备。</p><p>依据ISO的营运持续概念，无论是有预警或无预警的灾害与意外事件，若事前做好了风险管理、紧急应变以及营运持续管理，都可以在灾害发生后、或濒临灾害发生前启动紧急应变和营运持续行动，让组织受到的影响降低，并且可以尽快恢复预先设定的最低营运水准以上的运作。</p><p>在各领域中，率先注重营运持续的资讯产业，时间可追溯至1970年代。2006年，英国首先制订了营运持续计划的标准BS 25999。但是，营运持续尚未受到全球企业的关注。</p><p>美国政府在911事件之后，全面性地重视政府机关与重要基础设施与机构的持续运作（Continuity of Operation），政府机关和一些受政府经费补助的重要机构如医院、养护机构必须建立持续运作计划（Continuity of Operation Plan, COOP），以维持这些重要机关的运作，否则社会体系将更为混乱影响复原的时间。</p><p>另一方面，民间企业则是各自建立其营运持续计划（Business Continuity Plan, BCP），以便在灾时设施受损、交通或维生系统中断、人员伤亡等，甚至是灾害发生于外地造成供应链中断时，能够维持预设的最低限度服务或生产能力，以免冲击过大而在灾害某一段时间后因服务或生产中断而倒闭。</p><p>2011年是营运持续管理被重视的转捩点，因为连续发生了两个造成全球产业重大影响的灾害。一个是3月的311东日本大震灾，另一个是11月泰国首都曼谷附近的水灾。2011年311东日本大震灾是至今全球造成经济损失金额最高的灾害，关键的原因并非只是地震、海啸甚至于福岛核灾的直接影响，而更是因为产业链中断造成。</p><p>换言之，重大灾害的直接冲击，以及道路、交通中断，停水、停电、停气，造成制造业原料与零组件供应停止而无法继续生产，也造成服务业无法提供服务。至于泰国的水灾，从7月开始由泰国北部开始陆续发生，延续了将约五个月。直到11月时，泰国首都曼谷附近大量外资企业工厂被洪水淹没，造成全球产业供应链大乱，包括半导体、电脑、相机、汽车等，伤亡人数很少，但是经济损失却是全球性的。</p><p>日本于2011年311东日本大震灾时，全国共有547个高龄照护机构（社会福祉施设）受损，导致严重伤亡或营运中断，对养护的高龄者造成重大影响。尤其是受灾最严重的岩手、宫城、福岛三县，共有三百多个高龄照护机构受灾，高龄者与职员工共578人死亡或下落不明。因此，高龄照护机构的紧急应变，与营运持续能力的建立与计划的拟定和落实，在灾害备受重视。</p><p>在这两个重大灾害之后，国际标准组织将BS 25999标准精进后，于2012年推出ISO 22301:2012的营运持续计划标准（Security and resilience - Business continuity management systems - Requirements）。该标准并于2019年完成修订，新的标准是ISO 22301:2019。该标准主要的内容是叙述营运持续计划的目标和要求，让企业或机关了解营运持续计划的重要性和必要的内容。</p><p>目前营运持续的国际标准是ISO 22301，台湾仅有少数企业取得认证。较具指标性的是联华电子为全球第一家取得认证的半导体厂，而刚刚获得认证的是鸿海公司的南崁厂。</p><p>虽然台湾在工程减灾上已经相当进步，各种输变电设施、净水和供水设施、瓦斯储存与输气等维生管线、基础建设在设计和施工时，都有一定的规范考量特定的灾害规模，平时维护的人力也绝对不足以在灾害时短时间内进行抢修（灾害抢修的人力是平时一般维护的数十、数百、甚至于数千倍）。政府和民众都不可能为了几年、几十年才会发生一次的重大灾害，花上无法想像的代价建置系统和抢修团队。资源必定是有限的。</p><p>所以，防灾另一个重要的面向是让所有的机关、企业、医疗与养护场所、家庭、个人，能够了解灾害可能造成的影响，针对这些状况，包括一定时间的停电、停水、停气、通讯中断、交通中断等预先做好实质准备（不只是“心理准备”），以便减缓受到的冲击。</p><p>对各种组织来说，平日做了风险评估（Risk assessment）和营运冲击分析（Business impact assessment, BIA），辨识出核心作业和瓶颈、乃至于可忍受的最长中断营运时间，就可以针对灾害或重大事件干扰的影响决定对策（例如备援设备和系统、赘余系统、替代供应商等）、投入资源。不仅降低灾害冲击，且在事前设定的最短时间内恢复关键营运作业，维护公司信誉，避免违约赔偿和客诉，保住甚至于提升市场占有率，也同时让机关和公司能够不倒下，继续提供就业机会和服务，善尽社会责任。然而，这都要靠企业自主，不能都靠政府。</p><p><a class="image" href="https://theinitium.com/article/20220922-opinion-taiwan-earthquake-continuity-operation/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/09/e3ee559ae0964e7296c5fcea1815a0f3.jpg?imageView2/1/w/1080/h/1620/format/jpg" alt="1999年9月23日，台湾军人从一栋倒塌的住宅楼中抬出尸体。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
