--- a/_posts/2022-09-23-PQ-日韓關係有起色-日韓領袖首次坐下來-懇談-30分鐘.html
+++ b/_posts/2022-09-23-PQ-日韓關係有起色-日韓領袖首次坐下來-懇談-30分鐘.html
@@ -24,7 +24,7 @@ author: 陳怡菱
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/c7caa47a-watermark-2-1024x682.jpg" alt="" class="wp-image-115241" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/c7caa47a-watermark-2-1024x682.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/c7caa47a-watermark-2-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/c7caa47a-watermark-2-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/c7caa47a-watermark-2.jpg 1280w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>配合聯合國大會，21日日韓領袖與多位官員坐下來「懇談」，雙方政府都表示這並非正式會談。<br>（圖／韓國總統府）</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/c7caa47a-watermark-2-1024x682.jpg" alt="" class="wp-image-115241" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/c7caa47a-watermark-2-1024x682.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/c7caa47a-watermark-2-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/c7caa47a-watermark-2-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/c7caa47a-watermark-2.jpg 1280w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>配合聯合國大會，21日日韓領袖與多位官員坐下來「懇談」，雙方政府都表示這並非正式會談。<br>（圖／韓國總統府）</figcaption></figure></div>
 
 
 
