--- a/_posts/2022-09-23-PQ-立院院會表決通過-數位部業務歸交通委員會主審.html
+++ b/_posts/2022-09-23-PQ-立院院會表決通過-數位部業務歸交通委員會主審.html
@@ -20,7 +20,7 @@ author: 呂酒林
 
 
 
-<figure class="wp-block-image size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/df58b2e5-1152x768_wmkn_20220923000028.jpg" alt="" class="wp-image-115292" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/df58b2e5-1152x768_wmkn_20220923000028.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/df58b2e5-1152x768_wmkn_20220923000028-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/df58b2e5-1152x768_wmkn_20220923000028-768x512.jpg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>立法院新會期 23 日開議，行政院長蘇貞昌率各部會首長進行施政報告並備詢，圖為數位發展部長唐鳳赴立法院議場。（圖／中央社）</figcaption></figure>
+<figure class="wp-block-image size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/df58b2e5-1152x768_wmkn_20220923000028.jpg" alt="" class="wp-image-115292" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/df58b2e5-1152x768_wmkn_20220923000028.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/df58b2e5-1152x768_wmkn_20220923000028-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/df58b2e5-1152x768_wmkn_20220923000028-768x512.jpg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>立法院新會期 23 日開議，行政院長蘇貞昌率各部會首長進行施政報告並備詢，圖為數位發展部長唐鳳赴立法院議場。（圖／中央社）</figcaption></figure>
 
 
 
