--- a/_posts/2022-09-24-INMEDIA-學生戴特製口罩吹笛掀熱議-教育局強烈譴責網絡欺凌.html
+++ b/_posts/2022-09-24-INMEDIA-學生戴特製口罩吹笛掀熱議-教育局強烈譴責網絡欺凌.html
@@ -12,7 +12,7 @@ author: 獨媒報導
 <p><strong>教育局：口罩屬管樂器者專用 減飛沫擴散</strong></p>
 <p>《少年中國說》片長約5分半鐘，由逾400名學生學生戴著口罩，表演音樂、普通話朗誦、武術、中華民族舞蹈、書法等。當中有吹笛子的女學生戴特製口罩，口罩有兩層，底層嘴巴位置有開口，面層設有擋布，笛子可放在底面兩層中間吹奏。翻查資料，該款口罩日本製，可重覆清洗使用，適用於長笛、短笛，以及帶有大吹咀的管樂器，於本港連鎖琴行有售，每個售160元。</p>
 <p>教育局昨日在「政策正面睇」發表「譴責網絡欺凌」為題的文章，稱音樂錄像於今年八月下旬拍攝，當時疫情個案漸升，故所有演出的學生須佩戴口罩，減少飛沫的擴散及接觸。局方又指，吹笛子的同學所佩戴的口罩屬管樂器者專用的口罩，其他國家亦有採用。</p>
-<p>教育局：網絡欺凌令人齒冷 背後用心與言論自由無關</p>
+<p><strong>教育局：網絡欺凌令人齒冷 背後用心與言論自由無關</strong></p>
 <p>教育局表示，有部分人士在網上發表不當言論，肆意嘲笑及醜化同學戴口罩演出的負責任行為，甚至以滋擾和冒犯的言辭欺凌熱心同學，斥此舉超越社會的道德底線，其遣詞用字及言論背後的用心完全與言論自由無關。</p>
 <p>當局又指，這些針對年輕學子的網絡欺凌，令他們的名譽受損，甚或承受心理壓力和負面情緒，實在令人齒冷，局方予以強烈譴責，並會保留追究權利。局方表示，事情絕對不容助長，希望社會各界挺身保護年輕學子，齊聲譴責此類網上欺凌行為，使其立即停止，免令同學遭受進一步的滋擾。</p>
 </div></div></div>
