--- a/_posts/2022-09-24-PQ-伊朗少女之死-不見天日的容顏-不及綻放的青春.html
+++ b/_posts/2022-09-24-PQ-伊朗少女之死-不見天日的容顏-不及綻放的青春.html
@@ -12,7 +12,7 @@ author: 李 運理
 <p>本週二（9 月 20 日），伊朗一名 22 歲少女艾米尼（Mahsa Amini ）因沒有正確配戴伊斯蘭頭巾（hijab），在首都德黑蘭遭到「道德警察」的逮補。然而在艾米尼被逮捕後不久，卻因為頭部受到多次重擊，而被送到當地醫院，昏迷 3 日後於本週五（9 月 23 日）去世。</p>
 </p>
 <div class="wp-block-image">
-<figure class="aligncenter size-large is-resized"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/95cb0108-@leahremini-1024x1024.jpeg" alt="" class="wp-image-115358" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/95cb0108-@leahremini-1024x1024.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/95cb0108-@leahremini-300x300.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/95cb0108-@leahremini-150x150.jpeg 150w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/95cb0108-@leahremini-768x768.jpeg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/95cb0108-@leahremini-1536x1536.jpeg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/95cb0108-@leahremini.jpeg 2048w" sizes="(max-width: 445px) 100vw, 445px" /><figcaption>被道德警察不當毆打昏迷的艾米尼（twitter@LeahRemini）</figcaption></figure>
+<figure class="aligncenter size-large is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/95cb0108-@leahremini-1024x1024.jpeg" alt="" class="wp-image-115358" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/95cb0108-@leahremini-1024x1024.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/95cb0108-@leahremini-300x300.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/95cb0108-@leahremini-150x150.jpeg 150w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/95cb0108-@leahremini-768x768.jpeg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/95cb0108-@leahremini-1536x1536.jpeg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/95cb0108-@leahremini.jpeg 2048w" sizes="(max-width: 445px) 100vw, 445px" /><figcaption>被道德警察不當毆打昏迷的艾米尼（twitter@LeahRemini）</figcaption></figure>
 </div>
 <p>艾米尼的去世引起伊朗社會的憤怒，<strong>當地女性長期受到不平等的壓迫、歧視所形成的憤怒傾瀉而出，並衍伸至對當局者的不滿。</strong>至今伊朗各地示威遊行仍不見止息，動亂至今已引發至少三人的死亡。</p>
 <p>面對人民及國際的譴責，伊朗政府則批評這些動亂出於「政治動機」，並且指責「不具名的境外勢力」煽動這場動亂。<br /><a href="https://twitter.com/AlinejadMasih/status/1571134616974790656?s=20&amp;t=J-xj69Q7tu_ak4zRATIt0w"></a></p>
@@ -32,7 +32,7 @@ author: 李 運理
 <p>艾米尼的家屬和目擊者，均指控道德警察在逮捕艾米尼後，在警用休旅車內毆打她。然而警方拒絕這項指控，並聲稱艾米尼的送醫原因是患有先天的心臟病。據獨立媒體《伊朗國際》報導，艾米尼實際送醫時的情況，已近乎「無法透過手術挽回生命」，包括腦組織嚴重受損，且依照受傷的嚴重度，艾米尼頭部所遭受的擊打，絕非單次可達成。</p>
 </p>
 <ul class="pqnote">
-<li>艾米尼事件中的道德警察，其職責是負責執行伊朗的宗教儀式與維持公共道德，也抱括管制人民的服裝儀容。</li>
+<li>艾米尼事件中的道德警察，其職責是負責執行伊朗的宗教儀式與維持公共道德，也包括管制人民的服裝儀容。</li>
 <li>根據伊朗的法律，所有符合年齡的女性在公共場合需配戴頭巾，著寬鬆的衣服。關於年齡的標準卻未明定，一般而言，7 歲的女童於上小學時，開始佩戴頭巾。</li>
 <li>根據《伊斯蘭教法》（Islamic Sharia law）中對服裝儀容的規定無分男女，都要求必須穿著得體。然而實際上，道德警察執法的對象都針對女性。</li>
 </ul>
