--- a/_posts/2022-09-24-INMEDIA-繼續紀錄-前言-離散-重整-再出發.html
+++ b/_posts/2022-09-24-INMEDIA-繼續紀錄-前言-離散-重整-再出發.html
@@ -13,4 +13,5 @@ author: 獨媒報導
 <p>在這個系列，《獨媒》訪問了其中三個媒體。在獨立經營的情況下，資源緊絀，有人說每日都忙到「懷疑人生」，說出來之際卻一臉滿足。痛並快樂着，只因他們在做喜歡的事。</p>
 <p>訪問期間，我們很自然就談到「做到幾時」的問題，相信也是行家近年問得最多的問題之一。「盡做囉——真係諗唔到其他答案，唔係想hea答。」原來撫心自問時，「盡做」也是你我的唯一答案。</p>
 <p>花果飄零，他們不再是「前記者」，而是以獨立記者的身份，繼續紀錄日常，譜寫城市軼事。寂靜裡需要多一點聲音，他們是如此確信着。</p>
+<p><strong>【繼續紀錄】專訪系列</strong><br /><a href="https://bit.ly/3xOn3o4">《The WELL》——拍無新聞價值的影像？</a><br /><a href="https://bit.ly/3C8Pb8j">《眾聲號》——重新出發、陪年青人拍片</a><br /><a href="https://bit.ly/3BIKvo3">《大城誌》——記錄小人物的一人網台</a></p>
 </div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
