--- a/_posts/2022-09-24-INMEDIA-繼續紀錄-眾聲號-重新出發-陪年青人拍片.html
+++ b/_posts/2022-09-24-INMEDIA-繼續紀錄-眾聲號-重新出發-陪年青人拍片.html
@@ -44,4 +44,6 @@ author: 獨媒報導
 <p>目睹新導演們努力的身影，導師們又有否技癢？Grace 提到，大家各自有freelance的拍攝工作，現時專心做新導演的同行者。比起是否以《眾聲號》的名義拍片，四人更希望見證新導演的成果， 也期望能有下一屆「新導演計劃」，公開招募參加者及籌集資金，乃至開班教學，讓更多人坐上《眾聲號》這艘船，航向更寬闊的大海。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/y8KuD263d3" title="（由受訪者提供）"><img src="https://live.staticflickr.com/65535/52365554176_d079929aa9_c.jpg" width="800" alt="（由受訪者提供）" /></a><br /><em>（由受訪者提供）</em></p>
 <p>註：「新導演計劃」原訂在新平台播放，後來決定沿用《眾聲號》專頁播放。</p>
+<p><strong>【繼續紀錄】專訪系列</strong><br /><a href="https://bit.ly/3r5wETO">前言：離散 重整 再出發</a><br /><a href="https://bit.ly/3xOn3o4">《The WELL》——拍無新聞價值的影像？</a><br />
+《眾聲號》——重新出發、陪年青人拍片<br /><a href="https://bit.ly/3BIKvo3">《大城誌》——記錄小人物的一人網台</a></p>
 </div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
