Update VOCUS 2022-09-26 patch

--- a/_posts/2022-09-25-VOCUS-半兵衛脇差-淺論岸田文雄聯合國之行的背後因素及期待.html
+++ b/_posts/2022-09-25-VOCUS-半兵衛脇差-淺論岸田文雄聯合國之行的背後因素及期待.html
@@ -37,14 +37,10 @@ author: 謝文生
 <div class="draft-block draft--p left">所以這幾個月來，總是一直看到韓方放消息說要尹岸會了，日本則是一再否認；證實了的確雙方有在談，但節奏並不一致；所以繼前次在西班牙NATO峰會的餐會上『相遇交談』的方式，這次在聯合的談話，韓國用『會談』，日方用『懇談』一詞，就是向國內保守派表達「聽一聽而已」的態度。</div>
 <div class="draft-block draft--p left">而跟菲律賓小馬可士總統的會談，無疑是此行重點之一。特別是在美國積極協調之下，菲律賓駐美大使日前曾公開表態，若是台灣有事，菲律賓將會提供美國使用菲國的軍事基地，這等於是對中國想進入太平洋的企圖，關上了從台灣北方的日本跟南方菲律賓的兩道閘門。對於近年極力協助菲律賓軍事及首都建設的日本來說，無疑是蓋了保證書；因此岸田跟小馬可士的會談內容，其實相當值得關注。</div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/46e21b03-e302-4ac6-9075-67b368dd9bfa.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖4：岸田文雄與菲律賓總統小馬可仕（照片來源：日本首相官邸臉書）</figcaption></div></div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-1ejuv">【延伸新聞】</h2>
 <div class="draft-block draft--p left">本文主要是回應日前美國之音記者向凌的採訪而擬的短文，因此也在此附上美國之音就此議題採訪我以及日本大學國際關係部教授松本佐保的新聞記事。</div>
-<div class="draft-block draft--p left"></div>
 <div><h3><a href="https://www.voacantonese.com/a/kishida-s-un-ambitions-aiming-at-sino-russian-threats-and-maintaining-taiwan-strait-security-20220922/6758622.html">日相聯合國演說明指俄羅斯暗批中國 台海危機是重點</a></h3><span>日本首相岸田文雄在聯合國大會發表演說時，呼籲改革包括中國與俄羅斯擔任常任理事國的安理會。專家認為岸田藉由批評俄羅斯暗指中國在東亞造成的威脅，而遏止中國勢力在國際組織中的擴張，是日本邁向成為世界大國的條件。 第77屆聯合國大會9月20至26日在紐約舉行，約150位國家的領導人都親自來到現場，中國與俄羅斯的國家領導人缺席，改由外長參加大會。 ...</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&amp;url=https%3A%2F%2Fgdb.voanews.com%2F09860000-0aff-0242-f23c-08da9ca0f5e0_w1200_r1.jpg&amp;width=550&amp;sign=Ntzspi9Oa93AfFmNkQJ9LSIOvFGq7HWdi8lRhJoVivE"></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">此外，美國之音近日也在嘗試以影音方式呈現採訪內容，所以也將本新聞的推持影音附上，僅1分鐘，目前近3萬的點閱，底下小粉紅崩潰漫駡的留言很有趣。</div>
-<div><iframe allowfullscreen src="https://twitter.com/VOAChinese/status/1573313517100433409"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://twitter.com/VOAChinese/status/1573313517100433409"></iframe></div>
 <div class="draft-block draft--p left">（本文結束）</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">（如您覺得這篇文章值得給予作者鼓勵， 請按下方心形的讚，感謝！）</span></div>
